--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,30 @@
+asn1crypto==0.24.0
+certifi==2018.1.18
+cffi==1.11.5
+chardet==3.0.4
 click==6.7
+cryptography==2.1.4
 daiquiri==1.3.0
+docopt==0.6.2
 Flask==0.12.2
+Flask-Login==0.4.1
 Flask-WTF==0.14.2
+idna==2.6
 itsdangerous==0.24
+jedi==0.11.1
 Jinja2==2.10
 MarkupSafe==1.0
+parso==0.1.1
+prompt-toolkit==1.0.15
+ptpython==0.41
+pycparser==2.18
+Pygments==2.2.0
+pyOpenSSL==17.5.0
+PySocks==1.6.8
+requests==2.18.4
+six==1.11.0
+urllib3==1.22
 uWSGI==2.0.16
+wcwidth==0.1.7
 Werkzeug==0.14.1
 WTForms==2.1
