--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asn1crypto==0.24.0
+attrs==17.4.0
 certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
@@ -15,12 +16,15 @@ jedi==0.11.1
 Jinja2==2.10
 MarkupSafe==1.0
 parso==0.1.1
+pluggy==0.6.0
 prompt-toolkit==1.0.15
 ptpython==0.41
+py==1.5.2
 pycparser==2.18
 Pygments==2.2.0
 pyOpenSSL==17.5.0
 PySocks==1.6.8
+pytest==3.4.2
 requests==2.18.4
 six==1.11.0
 urllib3==1.22
