--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ click==6.7
 cryptography==2.1.4
 daiquiri==1.3.0
 docopt==0.6.2
+dominate==2.3.1
 Flask==0.12.2
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-WTF==0.14.2
 idna==2.6
@@ -29,6 +31,7 @@ requests==2.18.4
 six==1.11.0
 urllib3==1.22
 uWSGI==2.0.16
+visitor==0.1.3
 wcwidth==0.1.7
 Werkzeug==0.14.1
 WTForms==2.1
