--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asn1crypto==0.24.0
 attrs==17.4.0
+bcrypt==3.1.4
 certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
@@ -17,13 +18,16 @@ itsdangerous==0.24
 jedi==0.11.1
 Jinja2==2.10
 MarkupSafe==1.0
+paramiko==2.4.0
 parso==0.1.1
 pluggy==0.6.0
 prompt-toolkit==1.0.15
 ptpython==0.41
 py==1.5.2
+pyasn1==0.4.2
 pycparser==2.18
 Pygments==2.2.0
+PyNaCl==1.2.1
 pyOpenSSL==17.5.0
 PySocks==1.6.8
 pytest==3.4.2
