--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,10 @@ itsdangerous==0.24
 jedi==0.11.1
 Jinja2==2.10
 MarkupSafe==1.0
-paramiko==2.4.0
+paramiko==2.4.1
 parso==0.1.1
+pastaplus.soh==0.2
+pendulum==1.4.2
 pluggy==0.6.0
 prompt-toolkit==1.0.15
 ptpython==0.41
@@ -31,8 +33,13 @@ PyNaCl==1.2.1
 pyOpenSSL==17.5.0
 PySocks==1.6.8
 pytest==3.4.2
+python-dateutil==2.7.0
+pytz==2018.3
+pytzdata==2018.3
 requests==2.18.4
 six==1.11.0
+SQLAlchemy==1.2.5
+tzlocal==1.5.1
 urllib3==1.22
 uWSGI==2.0.16
 visitor==0.1.3
