--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,11 @@ idna==2.6
 itsdangerous==0.24
 jedi==0.11.1
 Jinja2==2.10
+ldap3==2.4.1
 MarkupSafe==1.0
 paramiko==2.4.1
 parso==0.1.1
-pastaplus.soh==0.2
+pastaplus.soh==0.6.1
 pendulum==1.4.2
 pluggy==0.6.0
 prompt-toolkit==1.0.15
@@ -41,6 +42,7 @@ six==1.11.0
 SQLAlchemy==1.2.5
 tzlocal==1.5.1
 urllib3==1.22
+uWSGI==2.0.16
 visitor==0.1.3
 wcwidth==0.1.7
 Werkzeug==0.14.1
