--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asn1crypto==0.24.0
 attrs==17.4.0
 bcrypt==3.1.4
-certifi==2018.1.18
+certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
 click==6.7
@@ -25,6 +25,7 @@ pastaplus.soh==0.6.1
 pendulum==1.4.2
 pluggy==0.6.0
 prompt-toolkit==1.0.15
+psycopg2==2.7.5
 ptpython==0.41
 py==1.5.2
 pyasn1==0.4.2
