--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 asn1crypto==0.24.0
 attrs==17.4.0
 bcrypt==3.1.4
-certifi==2018.1.18
+certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
 click==6.7
 cryptography==2.1.4
+cycler==0.10.0
 daiquiri==1.3.0
 docopt==0.6.2
 dominate==2.3.1
@@ -17,14 +18,20 @@ idna==2.6
 itsdangerous==0.24
 jedi==0.11.1
 Jinja2==2.10
+kiwisolver==1.0.1
 ldap3==2.4.1
 MarkupSafe==1.0
+matplotlib==2.2.2
+mkl-fft==1.0.0
+mkl-random==1.0.1
+numpy==1.14.5
 paramiko==2.4.1
 parso==0.1.1
 pastaplus.soh==0.6.1
 pendulum==1.4.2
 pluggy==0.6.0
 prompt-toolkit==1.0.15
+psycopg2==2.7.5
 ptpython==0.41
 py==1.5.2
 pyasn1==0.4.2
@@ -32,14 +39,16 @@ pycparser==2.18
 Pygments==2.2.0
 PyNaCl==1.2.1
 pyOpenSSL==17.5.0
+pyparsing==2.2.0
 PySocks==1.6.8
 pytest==3.4.2
-python-dateutil==2.7.0
-pytz==2018.3
+python-dateutil==2.7.3
+pytz==2018.4
 pytzdata==2018.3
 requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.2.5
+tornado==5.0.2
 tzlocal==1.5.1
 urllib3==1.22
 uWSGI==2.0.16
