--- a/webapp/config.py.template
+++ b/webapp/config.py.template
@@ -23,6 +23,8 @@ class Config(object):
     USERS = ('USER_DN')
     DOMAINS = {'edi': 'o=EDI,dc=edirepository,dc=org',
                'lter':'o=LTER,dc=ecoinformatics,dc=org',}
+    STATIC = 'STATIC IMAGE DIRECTORY PATH'
+
 
     # LDAP configuration
     LDAP = 'ldap.edirepository.org'
