--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 asn1crypto==0.24.0
 attrs==17.4.0
 bcrypt==3.1.4
-certifi==2018.10.15
+certifi==2018.11.29
 cffi==1.11.5
 chardet==3.0.4
-click==6.7
+Click==7.0
 cryptography==2.3.1
 cycler==0.10.0
 daiquiri==1.3.0
@@ -46,7 +46,7 @@ python-dateutil==2.7.5
 pytz==2018.7
 pytzdata==2018.3
 requests==2.20.1
-six==1.11.0
+six==1.12.0
 SQLAlchemy==1.2.5
 tornado==5.1.1
 tzlocal==1.5.1
