--- a/environment.yml
+++ b/environment.yml
@@ -3,79 +3,79 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - jansson=2.7=0
-  - uwsgi=2.0.16=py36_0
-  - asn1crypto=0.24.0=py36_0
-  - blas=1.0=mkl
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.11.29=py36_0
-  - cffi=1.11.5=py36he75722e_1
-  - chardet=3.0.4=py36_1
-  - click=7.0=py36_0
-  - cryptography=2.3.1=py36hc365091_0
-  - cycler=0.10.0=py36_0
-  - dbus=1.13.2=h714fa37_1
-  - expat=2.2.6=he6710b0_0
-  - flask=1.0.2=py36_1
-  - fontconfig=2.13.0=h9420a91_0
-  - freetype=2.9.1=h8a8886c_1
-  - glib=2.56.2=hd408876_0
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb453b48_1
-  - icu=58.2=h9c2bf20_1
-  - idna=2.7=py36_0
-  - intel-openmp=2019.1=144
-  - itsdangerous=1.1.0=py36_0
-  - jinja2=2.10=py36_0
-  - jpeg=9b=h024ee3a_2
-  - kiwisolver=1.0.1=py36hf484d3e_0
-  - krb5=1.16.1=hc83ff2d_6
-  - libedit=3.1.20170329=h6b74fdf_2
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=8.2.0=hdf63c60_1
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libiconv=1.15=h63c8f33_5
-  - libpng=1.6.35=hbc83047_0
-  - libpq=10.5=h1ad7b7a_0
-  - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.8=h26e45fe_1
-  - markupsafe=1.1.0=py36h7b6447c_0
-  - matplotlib=3.0.0=py36h5429711_0
-  - mkl=2018.0.3=1
-  - mkl_fft=1.0.6=py36h7dd41cf_0
-  - mkl_random=1.0.1=py36h4414c95_1
-  - ncurses=6.1=he6710b0_1
-  - numpy=1.15.2=py36h1d66e8a_1
-  - numpy-base=1.15.2=py36h81de0dd_1
-  - openssl=1.0.2p=h14c3975_0
-  - pcre=8.42=h439df22_0
-  - pip=18.1=py36_0
-  - psycopg2=2.7.5=py36hb7f436b_0
-  - pycparser=2.19=py36_0
-  - pyopenssl=18.0.0=py36_0
-  - pyparsing=2.3.0=py36_0
-  - pyqt=5.9.2=py36h05f1152_2
-  - pysocks=1.6.8=py36_0
-  - python=3.6.6=h6e4f718_2
-  - python-dateutil=2.7.5=py36_0
-  - pytz=2018.7=py36_0
-  - qt=5.9.6=h8703b6f_2
-  - readline=7.0=h7b6447c_5
-  - requests=2.20.1=py36_0
-  - setuptools=40.6.2=py36_0
-  - sip=4.19.8=py36hf484d3e_0
-  - six=1.12.0=py36_0
-  - sqlite=3.26.0=h7b6447c_0
-  - tk=8.6.8=hbc83047_0
-  - tornado=5.1.1=py36h7b6447c_0
-  - urllib3=1.23=py36_0
-  - werkzeug=0.14.1=py36_0
-  - wheel=0.32.3=py36_0
-  - xz=5.2.4=h14c3975_4
-  - yaml=0.1.7=had09818_2
-  - zlib=1.2.11=h7b6447c_3
+  - jansson=2.7
+  - uwsgi=2.0.16
+  - asn1crypto=0.24.0
+  - blas=1.0
+  - ca-certificates=2018.03.07
+  - certifi=2018.11.29
+  - cffi=1.11.5
+  - chardet=3.0.4
+  - click=7.0
+  - cryptography=2.3.1
+  - cycler=0.10.0
+  - dbus=1.13.2
+  - expat=2.2.6
+  - flask=1.0.2
+  - fontconfig=2.13.0
+  - freetype=2.9.1
+  - glib=2.56.2
+  - gst-plugins-base=1.14.0
+  - gstreamer=1.14.0
+  - icu=58.2
+  - idna=2.7
+  - intel-openmp=2019.1
+  - itsdangerous=1.1.0
+  - jinja2=2.10
+  - jpeg=9b
+  - kiwisolver=1.0.1
+  - krb5=1.16.1
+  - libedit=3.1.20170329
+  - libffi=3.2.1
+  - libgcc-ng=8.2.0
+  - libgfortran-ng=7.3.0
+  - libiconv=1.15
+  - libpng=1.6.35
+  - libpq=10.5
+  - libstdcxx-ng=8.2.0
+  - libuuid=1.0.3
+  - libxcb=1.13
+  - libxml2=2.9.8
+  - markupsafe=1.1.0
+  - matplotlib=3.0.2
+  - mkl=2019.1
+  - mkl_fft=1.0.6
+  - mkl_random=1.0.2
+  - ncurses=6.1
+  - numpy=1.15.4
+  - numpy-base=1.15.4
+  - openssl=1.0.2p
+  - pcre=8.42
+  - pip=18.1
+  - psycopg2=2.7.5
+  - pycparser=2.19
+  - pyopenssl=18.0.0
+  - pyparsing=2.3.0
+  - pyqt=5.9.2
+  - pysocks=1.6.8
+  - python=3.6.6
+  - python-dateutil=2.7.5
+  - pytz=2018.7
+  - qt=5.9.6
+  - readline=7.0
+  - requests=2.20.1
+  - setuptools=40.6.2
+  - sip=4.19.8
+  - six=1.12.0
+  - sqlite=3.26.0
+  - tk=8.6.8
+  - tornado=5.1.1
+  - urllib3=1.23
+  - werkzeug=0.14.1
+  - wheel=0.32.3
+  - xz=5.2.4
+  - yaml=0.1.7
+  - zlib=1.2.11
   - pip:
     - attrs==17.4.0
     - bcrypt==3.1.4
@@ -106,4 +106,3 @@ dependencies:
     - wcwidth==0.1.7
     - wtforms==2.1
 prefix: /home/servilla/anaconda3/envs/dashboard
-
