--- a/environment.yml
+++ b/environment.yml
@@ -3,16 +3,13 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - jansson=2.7
-  - uwsgi=2.0.16
   - asn1crypto=0.24.0
   - blas=1.0
-  - ca-certificates=2018.03.07
-  - certifi=2018.11.29
+  - ca-certificates=2019.1.23
+  - certifi=2019.3.9
   - cffi=1.11.5
   - chardet=3.0.4
   - click=7.0
-  - cryptography=2.3.1
   - cycler=0.10.0
   - dbus=1.13.2
   - expat=2.2.6
@@ -23,10 +20,8 @@ dependencies:
   - gst-plugins-base=1.14.0
   - gstreamer=1.14.0
   - icu=58.2
-  - idna=2.7
   - intel-openmp=2019.1
-  - itsdangerous=1.1.0
-  - jinja2=2.10
+  - jansson=2.7
   - jpeg=9b
   - kiwisolver=1.0.1
   - krb5=1.16.1
@@ -43,7 +38,6 @@ dependencies:
   - libxml2=2.9.8
   - libxslt=1.1.32
   - lxml=4.2.5
-  - markupsafe=1.1.0
   - matplotlib=3.0.2
   - mkl=2019.1
   - mkl_fft=1.0.6
@@ -51,9 +45,8 @@ dependencies:
   - ncurses=6.1
   - numpy=1.15.4
   - numpy-base=1.15.4
-  - openssl=1.0.2p
+  - openssl=1.0.2r
   - pcre=8.42
-  - pip=18.1
   - psycopg2=2.7.5
   - pycparser=2.19
   - pyopenssl=18.0.0
@@ -61,19 +54,16 @@ dependencies:
   - pyqt=5.9.2
   - pysocks=1.6.8
   - python=3.6.6
-  - python-dateutil=2.7.5
-  - pytz=2018.7
   - qt=5.9.6
   - readline=7.0
   - requests=2.20.1
   - setuptools=40.6.2
   - sip=4.19.8
-  - six=1.12.0
   - sqlite=3.26.0
   - tk=8.6.8
   - tornado=5.1.1
   - urllib3=1.23
-  - werkzeug=0.14.1
+  - uwsgi=2.0.16
   - wheel=0.32.3
   - xz=5.2.4
   - yaml=0.1.7
@@ -81,18 +71,24 @@ dependencies:
   - pip:
     - attrs==17.4.0
     - bcrypt==3.1.4
+    - cryptography==2.3
     - daiquiri==1.3.0
     - docopt==0.6.2
     - dominate==2.3.1
     - flask-bootstrap==3.3.7.1
     - flask-login==0.4.1
     - flask-wtf==0.14.2
+    - idna==2.7
+    - itsdangerous==0.24
     - jedi==0.11.1
+    - jinja2==2.10
     - ldap3==2.4.1
+    - markupsafe==1.0
     - paramiko==2.4.2
     - parso==0.1.1
-    - pastaplus.soh==2018.11.26
+    - pastaplus-soh==2018.11.26
     - pendulum==1.4.2
+    - pip==10.0.1
     - pluggy==0.6.0
     - prompt-toolkit==1.0.15
     - ptpython==0.41
@@ -101,10 +97,14 @@ dependencies:
     - pygments==2.2.0
     - pynacl==1.2.1
     - pytest==3.4.2
+    - python-dateutil==2.7.0
+    - pytz==2018.3
     - pytzdata==2018.3
+    - six==1.11.0
     - sqlalchemy==1.2.5
     - tzlocal==1.5.1
     - visitor==0.1.3
     - wcwidth==0.1.7
+    - werkzeug==0.14.1
     - wtforms==2.1
 prefix: /home/servilla/anaconda3/envs/dashboard
