--- a/environment.yml
+++ b/environment.yml
@@ -59,6 +59,7 @@ dependencies:
   - requests=2.20.1
   - setuptools=40.6.2
   - sip=4.19.8
+  - sqlalchemy=1.3.3
   - sqlite=3.26.0
   - tk=8.6.8
   - tornado=5.1.1
@@ -81,12 +82,12 @@ dependencies:
     - idna==2.7
     - itsdangerous==0.24
     - jedi==0.11.1
-    - jinja2==2.10.1
+    - jinja2==2.10
     - ldap3==2.4.1
     - markupsafe==1.0
     - paramiko==2.4.2
     - parso==0.1.1
-    - pastaplus.soh==2018.11.26
+    - pastaplus-soh==2018.11.26
     - pendulum==1.4.2
     - pip==10.0.1
     - pluggy==0.6.0
@@ -101,7 +102,6 @@ dependencies:
     - pytz==2018.3
     - pytzdata==2018.3
     - six==1.11.0
-    - sqlalchemy==1.2.5
     - tzlocal==1.5.1
     - visitor==0.1.3
     - wcwidth==0.1.7
