Integrate Solr for performance and report downloads

--- a/webapp/config.py.template
+++ b/webapp/config.py.template
@@ -24,6 +24,7 @@ class Config(object):
     DOMAINS = {'edi': 'o=EDI,dc=edirepository,dc=org',
                'lter':'o=LTER,dc=ecoinformatics,dc=org',}
     STATIC = 'STATIC IMAGE DIRECTORY PATH'
+    TMP_DIR = 'TEMPORARY DIRECTORY PATH'
 
 
     # LDAP configuration
