--- a/environment.yml
+++ b/environment.yml
@@ -3,69 +3,72 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - _libgcc_mutex=0.1
   - asn1crypto=0.24.0
   - blas=1.0
-  - ca-certificates=2019.1.23
-  - certifi=2019.3.9
+  - ca-certificates=2019.5.15
+  - certifi=2019.6.16
   - cffi=1.12.3
   - chardet=3.0.4
   - click=7.0
   - cycler=0.10.0
   - dbus=1.13.6
   - expat=2.2.6
-  - flask=1.0.2
+  - flask=1.1.1
   - fontconfig=2.13.0
   - freetype=2.9.1
   - glib=2.56.2
   - gst-plugins-base=1.14.0
   - gstreamer=1.14.0
   - icu=58.2
-  - intel-openmp=2019.3
+  - intel-openmp=2019.4
   - jansson=2.7
   - jpeg=9b
-  - kiwisolver=1.0.1
+  - kiwisolver=1.1.0
   - krb5=1.16.1
   - libedit=3.1.20181209
   - libffi=3.2.1
-  - libgcc-ng=8.2.0
+  - libgcc-ng=9.1.0
   - libgfortran-ng=7.3.0
   - libiconv=1.15
   - libpng=1.6.37
   - libpq=10.5
-  - libstdcxx-ng=8.2.0
+  - libstdcxx-ng=9.1.0
   - libuuid=1.0.3
   - libxcb=1.13
   - libxml2=2.9.9
   - libxslt=1.1.33
-  - lxml=4.3.3
-  - matplotlib=3.0.3
-  - mkl=2019.3
-  - mkl_fft=1.0.10
+  - lxml=4.4.1
+  - matplotlib=3.1.1
+  - mkl=2019.4
+  - mkl-service=2.3.0
+  - mkl_fft=1.0.14
   - mkl_random=1.0.2
   - ncurses=6.1
-  - numpy=1.16.3
-  - numpy-base=1.16.3
-  - openssl=1.0.2r
+  - numpy=1.16.4
+  - numpy-base=1.16.4
+  - openssl=1.0.2s
   - pcre=8.43
+  - pip=19.2.2
   - psycopg2=2.7.5
   - pycparser=2.19
   - pyopenssl=19.0.0
-  - pyparsing=2.4.0
+  - pyparsing=2.4.2
   - pyqt=5.9.2
-  - pysocks=1.6.8
+  - pysocks=1.7.0
   - python=3.6.6
   - qt=5.9.6
   - readline=7.0
-  - requests=2.21.0
-  - setuptools=41.0.0
+  - requests=2.22.0
+  - setuptools=41.0.1
   - sip=4.19.8
-  - sqlalchemy=1.3.3
-  - sqlite=3.28.0
+  - sqlalchemy=1.3.7
+  - sqlite=3.29.0
   - tk=8.6.8
-  - tornado=6.0.2
+  - tornado=6.0.3
   - urllib3=1.24.2
   - uwsgi=2.0.16
-  - wheel=0.33.1
+  - wheel=0.33.4
   - xz=5.2.4
   - yaml=0.1.7
   - zlib=1.2.11
@@ -81,15 +84,13 @@ dependencies:
     - flask-wtf==0.14.2
     - idna==2.7
     - itsdangerous==0.24
-    - jedi==0.11.1
+    - jedi==0.15.1
     - jinja2==2.10
     - ldap3==2.4.1
     - markupsafe==1.0
     - paramiko==2.4.2
-    - parso==0.1.1
-    - pastaplus-soh==2018.11.26
+    - parso==0.5.1
     - pendulum==1.4.2
-    - pip==10.0.1
     - pluggy==0.6.0
     - prompt-toolkit==1.0.15
     - ptpython==0.41
@@ -108,3 +109,4 @@ dependencies:
     - werkzeug==0.14.1
     - wtforms==2.1
 prefix: /home/servilla/anaconda3/envs/dashboard
+
