--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,65 @@
-asn1crypto==0.24.0
-attrs==17.4.0
-bcrypt==3.1.4
-certifi==2019.3.9
-cffi==1.12.3
-chardet==3.0.4
-Click==7.0
-cryptography==2.3.1
-cycler==0.10.0
-daiquiri==1.3.0
-docopt==0.6.2
-dominate==2.3.1
-Flask==1.0.2
-Flask-Bootstrap==3.3.7.1
-Flask-Login==0.4.1
-Flask-WTF==0.14.2
-idna==2.8
-itsdangerous==1.1.0
-jedi==0.11.1
-Jinja2==2.10.1
-kiwisolver==1.0.1
-ldap3==2.4.1
-lxml==4.3.3
-MarkupSafe==1.1.1
-matplotlib==3.0.3
-mkl-fft==1.0.10
-mkl-random==1.0.2
-numpy==1.16.3
-paramiko==2.4.2
-parso==0.1.1
-pastaplus.soh==2018.11.26
-pendulum==1.4.2
-pluggy==0.6.0
-prompt-toolkit==1.0.15
-psycopg2==2.7.5
-ptpython==0.41
-py==1.5.2
-pyasn1==0.4.2
-pycparser==2.19
-Pygments==2.2.0
-PyNaCl==1.2.1
-pyOpenSSL==19.0.0
-pyparsing==2.4.0
-PySocks==1.6.8
-pytest==3.4.2
-python-dateutil==2.8.0
-pytz==2019.1
-pytzdata==2018.3
-requests==2.21.0
-six==1.12.0
-SQLAlchemy==1.3.3
-tornado==6.0.2
-tzlocal==1.5.1
-urllib3==1.24.2
-uWSGI==2.0.16
-visitor==0.1.3
-wcwidth==0.1.7
-Werkzeug==0.15.2
-WTForms==2.1
+Package         Version  
+--------------- ---------
+asn1crypto      0.24.0   
+attrs           17.4.0   
+bcrypt          3.1.4    
+certifi         2019.6.16
+cffi            1.12.3   
+chardet         3.0.4    
+Click           7.0      
+cryptography    2.3      
+cycler          0.10.0   
+daiquiri        1.3.0    
+docopt          0.6.2    
+dominate        2.3.1    
+Flask           1.1.1    
+Flask-Bootstrap 3.3.7.1  
+Flask-Login     0.4.1    
+Flask-WTF       0.14.2   
+idna            2.8      
+itsdangerous    1.1.0    
+jedi            0.15.1   
+Jinja2          2.10.1   
+kiwisolver      1.1.0    
+ldap3           2.4.1    
+lxml            4.4.1    
+MarkupSafe      1.1.1    
+matplotlib      3.1.1    
+mkl-fft         1.0.14   
+mkl-random      1.0.2    
+mkl-service     2.3.0    
+numpy           1.16.4   
+paramiko        2.4.2    
+parso           0.5.1    
+pastaplus.soh   2019.9.10
+pendulum        1.4.2    
+pip             19.2.2   
+pluggy          0.6.0    
+prompt-toolkit  1.0.15   
+psycopg2        2.7.5    
+ptpython        0.41     
+py              1.5.2    
+pyasn1          0.4.2    
+pycparser       2.19     
+Pygments        2.2.0    
+PyNaCl          1.2.1    
+pyOpenSSL       19.0.0   
+pyparsing       2.4.2    
+PySocks         1.7.0    
+pytest          3.4.2    
+python-dateutil 2.8.0    
+pytz            2019.2   
+pytzdata        2018.3   
+requests        2.22.0   
+setuptools      41.0.1   
+six             1.12.0   
+SQLAlchemy      1.3.7    
+tornado         6.0.3    
+tzlocal         1.5.1    
+urllib3         1.24.2   
+uWSGI           2.0.16   
+visitor         0.1.3    
+wcwidth         0.1.7    
+Werkzeug        0.15.5   
+wheel           0.33.4   
+WTForms         2.1      
