--- a/environment.yml
+++ b/environment.yml
@@ -4,15 +4,15 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
-  - asn1crypto=0.24.0
+  - asn1crypto=1.3.0
   - blas=1.0
-  - ca-certificates=2019.5.15
-  - certifi=2019.6.16
-  - cffi=1.12.3
+  - ca-certificates=2020.1.1
+  - certifi=2019.11.28
+  - cffi=1.14.0
   - chardet=3.0.4
   - click=7.0
   - cycler=0.10.0
-  - dbus=1.13.6
+  - dbus=1.13.12
   - expat=2.2.6
   - flask=1.1.1
   - fontconfig=2.13.0
@@ -21,7 +21,7 @@ dependencies:
   - gst-plugins-base=1.14.0
   - gstreamer=1.14.0
   - icu=58.2
-  - intel-openmp=2019.4
+  - intel-openmp=2020.0
   - jansson=2.7
   - jpeg=9b
   - kiwisolver=1.1.0
@@ -38,37 +38,38 @@ dependencies:
   - libxcb=1.13
   - libxml2=2.9.9
   - libxslt=1.1.33
-  - lxml=4.4.1
-  - matplotlib=3.1.1
-  - mkl=2019.4
+  - lxml=4.5.0
+  - matplotlib=3.1.3
+  - matplotlib-base=3.1.3
+  - mkl=2020.0
   - mkl-service=2.3.0
-  - mkl_fft=1.0.14
-  - mkl_random=1.0.2
+  - mkl_fft=1.0.15
+  - mkl_random=1.1.0
   - ncurses=6.1
-  - numpy=1.16.4
-  - numpy-base=1.16.4
-  - openssl=1.0.2s
+  - numpy=1.18.1
+  - numpy-base=1.18.1
+  - openssl=1.0.2u
   - pcre=8.43
-  - pip=19.2.2
+  - pip=20.0.2
   - psycopg2=2.7.5
   - pycparser=2.19
   - pyopenssl=19.0.0
-  - pyparsing=2.4.2
+  - pyparsing=2.4.6
   - pyqt=5.9.2
-  - pysocks=1.7.0
+  - pysocks=1.7.1
   - python=3.6.6
   - qt=5.9.6
   - readline=7.0
   - requests=2.22.0
-  - setuptools=41.0.1
+  - setuptools=45.2.0
   - sip=4.19.8
-  - sqlalchemy=1.3.7
-  - sqlite=3.29.0
+  - sqlalchemy=1.3.13
+  - sqlite=3.31.1
   - tk=8.6.8
   - tornado=6.0.3
-  - urllib3=1.24.2
+  - urllib3=1.25.8
   - uwsgi=2.0.16
-  - wheel=0.33.4
+  - wheel=0.34.2
   - xz=5.2.4
   - yaml=0.1.7
   - zlib=1.2.11
@@ -90,6 +91,7 @@ dependencies:
     - markupsafe==1.0
     - paramiko==2.4.2
     - parso==0.5.1
+    - pastaplus-soh==2020.2.7
     - pendulum==1.4.2
     - pluggy==0.6.0
     - prompt-toolkit==1.0.15
@@ -109,4 +111,3 @@ dependencies:
     - werkzeug==0.14.1
     - wtforms==2.1
 prefix: /home/servilla/anaconda3/envs/dashboard
-
