--- a/environment.yml
+++ b/environment.yml
@@ -3,111 +3,108 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - asn1crypto=1.3.0
-  - blas=1.0
-  - ca-certificates=2020.1.1
-  - certifi=2019.11.28
-  - cffi=1.14.0
-  - chardet=3.0.4
-  - click=7.0
-  - cycler=0.10.0
-  - dbus=1.13.12
-  - expat=2.2.6
-  - flask=1.1.1
-  - fontconfig=2.13.0
-  - freetype=2.9.1
-  - glib=2.56.2
-  - gst-plugins-base=1.14.0
-  - gstreamer=1.14.0
-  - icu=58.2
-  - intel-openmp=2020.0
-  - jansson=2.7
-  - jpeg=9b
-  - kiwisolver=1.1.0
-  - krb5=1.16.1
-  - libedit=3.1.20181209
-  - libffi=3.2.1
-  - libgcc-ng=9.1.0
-  - libgfortran-ng=7.3.0
-  - libiconv=1.15
-  - libpng=1.6.37
-  - libpq=10.5
-  - libstdcxx-ng=9.1.0
-  - libuuid=1.0.3
-  - libxcb=1.13
-  - libxml2=2.9.9
-  - libxslt=1.1.33
-  - lxml=4.5.0
-  - matplotlib=3.1.3
-  - matplotlib-base=3.1.3
-  - mkl=2020.0
-  - mkl-service=2.3.0
-  - mkl_fft=1.0.15
-  - mkl_random=1.1.0
-  - ncurses=6.1
-  - numpy=1.18.1
-  - numpy-base=1.18.1
-  - openssl=1.0.2u
-  - pcre=8.43
-  - pip=20.0.2
-  - psycopg2=2.7.5
-  - pycparser=2.19
-  - pyopenssl=19.0.0
-  - pyparsing=2.4.6
-  - pyqt=5.9.2
-  - pysocks=1.7.1
-  - python=3.6.6
-  - qt=5.9.6
-  - readline=7.0
-  - requests=2.22.0
-  - setuptools=45.2.0
-  - sip=4.19.8
-  - sqlalchemy=1.3.13
-  - sqlite=3.31.1
-  - tk=8.6.8
-  - tornado=6.0.3
-  - urllib3=1.25.8
-  - uwsgi=2.0.16
-  - wheel=0.34.2
-  - xz=5.2.4
-  - yaml=0.1.7
-  - zlib=1.2.11
+  - _libgcc_mutex=0.1=main
+  - asn1crypto=1.3.0=py38_0
+  - attrs=19.3.0=py_0
+  - blas=1.0=mkl
+  - ca-certificates=2020.1.1=0
+  - certifi=2019.11.28=py38_0
+  - cffi=1.14.0=py38h2e261b9_0
+  - chardet=3.0.4=py38_1003
+  - click=7.0=py_0
+  - cryptography=2.8=py38h1ba5d50_0
+  - cycler=0.10.0=py38_0
+  - dbus=1.13.12=h746ee38_0
+  - expat=2.2.6=he6710b0_0
+  - flask=1.1.1=py_0
+  - flask-login=0.4.1=py38_0
+  - fontconfig=2.13.1=h86ecdb6_1001
+  - freetype=2.9.1=h8a8886c_1
+  - glib=2.63.1=h5a9c865_0
+  - gst-plugins-base=1.14.5=h0935bb2_2
+  - gstreamer=1.14.5=h36ae1b5_2
+  - icu=64.2=he1b5a44_1
+  - idna=2.8=py38_1000
+  - intel-openmp=2020.0=166
+  - itsdangerous=1.1.0=py_0
+  - jansson=2.11=h516909a_1001
+  - jinja2=2.11.1=py_0
+  - jpeg=9c=h14c3975_1001
+  - kiwisolver=1.0.1=py38he6710b0_0
+  - krb5=1.16.4=h173b8e3_0
+  - ld_impl_linux-64=2.33.1=h53a641e_7
+  - ldap3=2.6.1=py_0
+  - libedit=3.1.20181209=hc058e9b_0
+  - libffi=3.2.1=hd88cf55_4
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libiconv=1.15=h516909a_1005
+  - libpng=1.6.37=hbc83047_0
+  - libpq=11.2=h20c2e04_0
+  - libsodium=1.0.16=h1bed415_0
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libuuid=2.32.1=h14c3975_1000
+  - libxcb=1.13=h1bed415_1
+  - libxml2=2.9.10=hee79883_0
+  - libxslt=1.1.33=h31b3aaa_0
+  - lxml=4.5.0=py38hefd8a0e_0
+  - markupsafe=1.1.1=py38h7b6447c_0
+  - matplotlib=3.1.3=py38_0
+  - matplotlib-base=3.1.3=py38h250f245_0
+  - mkl=2020.0=166
+  - mkl-service=2.3.0=py38he904b0f_0
+  - mkl_fft=1.0.15=py38ha843d7b_0
+  - mkl_random=1.1.0=py38h962f231_0
+  - more-itertools=8.2.0=py_0
+  - ncurses=6.1=he6710b0_1
+  - numpy=1.18.1=py38h4f9e942_0
+  - numpy-base=1.18.1=py38hde5b4d6_1
+  - openssl=1.1.1d=h7b6447c_4
+  - packaging=20.1=py_0
+  - pcre=8.43=he6710b0_0
+  - pendulum=1.4.4=py38_0
+  - pip=20.0.2=py38_1
+  - pluggy=0.13.1=py38_0
+  - psycopg2=2.8.4=py38h1ba5d50_0
+  - py=1.8.1=py_0
+  - pyasn1=0.4.8=py_0
+  - pycparser=2.19=py_0
+  - pynacl=1.3.0=py38h7b6447c_0
+  - pyopenssl=19.1.0=py38_0
+  - pyparsing=2.4.6=py_0
+  - pyqt=5.9.2=py38h05f1152_4
+  - pysocks=1.7.1=py38_0
+  - pytest=5.3.5=py38_0
+  - python=3.8.1=h0371630_1
+  - python-dateutil=2.8.1=py_0
+  - pytz=2019.3=py_0
+  - pytzdata=2019.3=py_0
+  - qt=5.9.7=h0c104cb_3
+  - readline=7.0=h7b6447c_5
+  - requests=2.22.0=py38_1
+  - setuptools=45.2.0=py38_0
+  - sip=4.19.13=py38he6710b0_0
+  - six=1.14.0=py38_0
+  - sqlalchemy=1.3.13=py38h7b6447c_0
+  - sqlite=3.31.1=h7b6447c_0
+  - tk=8.6.10=hed695b0_0
+  - tornado=6.0.3=py38h7b6447c_3
+  - tzlocal=2.0.0=py38_0
+  - urllib3=1.25.8=py38_0
+  - uwsgi=2.0.18=py38h79bd928_3
+  - wcwidth=0.1.8=py_0
+  - werkzeug=1.0.0=py_0
+  - wheel=0.34.2=py38_0
+  - xz=5.2.4=h14c3975_4
+  - yaml=0.1.7=h14c3975_1001
+  - zlib=1.2.11=h7b6447c_3
   - pip:
-    - attrs==17.4.0
-    - bcrypt==3.1.4
-    - cryptography==2.3
-    - daiquiri==1.3.0
-    - docopt==0.6.2
-    - dominate==2.3.1
+    - daiquiri==2.0.0
+    - dominate==2.4.0
     - flask-bootstrap==3.3.7.1
-    - flask-login==0.4.1
-    - flask-wtf==0.14.2
-    - idna==2.7
-    - itsdangerous==0.24
-    - jedi==0.15.1
-    - jinja2==2.10
-    - ldap3==2.4.1
-    - markupsafe==1.0
-    - paramiko==2.4.2
-    - parso==0.5.1
+    - flask-wtf==0.14.3
     - pastaplus-soh==2020.2.7
-    - pendulum==1.4.2
-    - pluggy==0.6.0
-    - prompt-toolkit==1.0.15
-    - ptpython==0.41
-    - py==1.5.2
-    - pyasn1==0.4.2
-    - pygments==2.2.0
-    - pynacl==1.2.1
-    - pytest==3.4.2
-    - python-dateutil==2.7.0
-    - pytz==2018.3
-    - pytzdata==2018.3
-    - six==1.11.0
-    - tzlocal==1.5.1
+    - python-json-logger==0.1.11
     - visitor==0.1.3
-    - wcwidth==0.1.7
-    - werkzeug==0.14.1
-    - wtforms==2.1
+    - wtforms==2.2.1
 prefix: /home/servilla/anaconda3/envs/dashboard
