--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,56 @@
 asn1crypto==1.3.0
-attrs==17.4.0
-bcrypt==3.1.4
+attrs==19.3.0
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
 Click==7.0
-cryptography==2.3.1
+cryptography==2.8
 cycler==0.10.0
-daiquiri==1.3.0
-docopt==0.6.2
-dominate==2.3.1
+daiquiri==2.0.0
+dominate==2.4.0
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
-Flask-WTF==0.14.2
+Flask-WTF==0.14.3
 idna==2.8
 itsdangerous==1.1.0
-jedi==0.15.1
 Jinja2==2.11.1
-kiwisolver==1.1.0
-ldap3==2.4.1
+kiwisolver==1.0.1
+ldap3==2.6.1
 lxml==4.5.0
 MarkupSafe==1.1.1
 matplotlib==3.1.3
 mkl-fft==1.0.15
 mkl-random==1.1.0
 mkl-service==2.3.0
+more-itertools==8.2.0
 numpy==1.18.1
-paramiko==2.4.2
-parso==0.5.1
+packaging==20.1
 pastaplus.soh==2020.2.7
-pendulum==1.4.2
-pluggy==0.6.0
-prompt-toolkit==1.0.15
-psycopg2==2.7.5
-ptpython==0.41
-py==1.5.2
-pyasn1==0.4.2
+pendulum==1.4.4
+pluggy==0.13.1
+psycopg2==2.8.4
+py==1.8.1
+pyasn1==0.4.8
 pycparser==2.19
-Pygments==2.2.0
-PyNaCl==1.2.1
-pyOpenSSL==19.0.0
+PyNaCl==1.3.0
+pyOpenSSL==19.1.0
 pyparsing==2.4.6
 PySocks==1.7.1
-pytest==3.4.2
+pytest==5.3.5
 python-dateutil==2.8.1
-pytz==2018.3
-pytzdata==2018.3
+python-json-logger==0.1.11
+pytz==2019.3
+pytzdata==2019.3
 requests==2.22.0
+sip==4.19.13
 six==1.14.0
 SQLAlchemy==1.3.13
 tornado==6.0.3
-tzlocal==1.5.1
+tzlocal==2.0.0
 urllib3==1.25.8
-uWSGI==2.0.16
+uWSGI==2.0.18
 visitor==0.1.3
-wcwidth==0.1.7
+wcwidth==0.1.8
 Werkzeug==1.0.0
-WTForms==2.1
+WTForms==2.2.1
