--- a/environment.yml
+++ b/environment.yml
@@ -3,107 +3,113 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - asn1crypto=1.3.0=py38_0
-  - attrs=19.3.0=py_0
-  - blas=1.0=mkl
-  - ca-certificates=2020.1.1=0
-  - certifi=2019.11.28=py38_0
-  - cffi=1.14.0=py38h2e261b9_0
-  - chardet=3.0.4=py38_1003
-  - click=7.0=py_0
-  - cryptography=2.8=py38h1ba5d50_0
-  - cycler=0.10.0=py38_0
-  - dbus=1.13.12=h746ee38_0
-  - expat=2.2.6=he6710b0_0
-  - flask=1.1.1=py_0
-  - flask-login=0.4.1=py38_0
-  - fontconfig=2.13.1=h86ecdb6_1001
-  - freetype=2.9.1=h8a8886c_1
-  - glib=2.63.1=h5a9c865_0
-  - gst-plugins-base=1.14.5=h0935bb2_2
-  - gstreamer=1.14.5=h36ae1b5_2
-  - icu=64.2=he1b5a44_1
-  - idna=2.8=py38_1000
-  - intel-openmp=2020.0=166
-  - itsdangerous=1.1.0=py_0
-  - jansson=2.11=h516909a_1001
-  - jinja2=2.11.1=py_0
-  - jpeg=9c=h14c3975_1001
-  - kiwisolver=1.0.1=py38he6710b0_0
-  - krb5=1.16.4=h173b8e3_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - ldap3=2.6.1=py_0
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libiconv=1.15=h516909a_1005
-  - libpng=1.6.37=hbc83047_0
-  - libpq=11.2=h20c2e04_0
-  - libsodium=1.0.16=h1bed415_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libuuid=2.32.1=h14c3975_1000
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.10=hee79883_0
-  - libxslt=1.1.33=h31b3aaa_0
-  - lxml=4.5.0=py38hefd8a0e_0
-  - markupsafe=1.1.1=py38h7b6447c_0
-  - matplotlib=3.1.3=py38_0
-  - matplotlib-base=3.1.3=py38h250f245_0
-  - mkl=2020.0=166
-  - mkl-service=2.3.0=py38he904b0f_0
-  - mkl_fft=1.0.15=py38ha843d7b_0
-  - mkl_random=1.1.0=py38h962f231_0
-  - more-itertools=8.2.0=py_0
-  - ncurses=6.1=he6710b0_1
-  - numpy=1.18.1=py38h4f9e942_0
-  - numpy-base=1.18.1=py38hde5b4d6_1
-  - openssl=1.1.1d=h7b6447c_4
-  - packaging=20.1=py_0
-  - pcre=8.43=he6710b0_0
-  - pendulum=1.4.4=py38_0
-  - pip=20.0.2=py38_1
-  - pluggy=0.13.1=py38_0
-  - psycopg2=2.8.4=py38h1ba5d50_0
-  - py=1.8.1=py_0
-  - pyasn1=0.4.8=py_0
-  - pycparser=2.19=py_0
-  - pynacl=1.3.0=py38h7b6447c_0
-  - pyopenssl=19.1.0=py38_0
-  - pyparsing=2.4.6=py_0
-  - pyqt=5.9.2=py38h05f1152_4
-  - pysocks=1.7.1=py38_0
-  - pytest=5.3.5=py38_0
-  - python=3.8.1=h0371630_1
-  - python-dateutil=2.8.1=py_0
-  - pytz=2019.3=py_0
-  - pytzdata=2019.3=py_0
-  - qt=5.9.7=h0c104cb_3
-  - readline=7.0=h7b6447c_5
-  - requests=2.22.0=py38_1
-  - setuptools=45.2.0=py38_0
-  - sip=4.19.13=py38he6710b0_0
-  - six=1.14.0=py38_0
-  - sqlalchemy=1.3.13=py38h7b6447c_0
-  - sqlite=3.31.1=h7b6447c_0
-  - tk=8.6.10=hed695b0_0
-  - tornado=6.0.3=py38h7b6447c_3
-  - tzlocal=2.0.0=py38_0
-  - urllib3=1.25.8=py38_0
-  - uwsgi=2.0.18=py38h79bd928_3
-  - wcwidth=0.1.8=py_0
-  - werkzeug=1.0.0=py_0
-  - wheel=0.34.2=py38_0
-  - xz=5.2.4=h14c3975_4
-  - yaml=0.1.7=h14c3975_1001
-  - zlib=1.2.11=h7b6447c_3
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - appdirs=1.4.4
+  - attrs=20.3.0
+  - black=20.8b1
+  - brotlipy=0.7.0
+  - ca-certificates=2020.11.8
+  - certifi=2020.11.8
+  - cffi=1.14.4
+  - chardet=3.0.4
+  - click=7.1.2
+  - cryptography=3.2.1
+  - cycler=0.10.0
+  - daiquiri=3.0.0
+  - dataclasses=0.7
+  - dominate=2.4.0
+  - flask=1.1.2
+  - flask-bootstrap=3.3.7.1
+  - flask-login=0.5.0
+  - flask-wtf=0.14.3
+  - freetype=2.10.4
+  - icu=67.1
+  - idna=2.10
+  - iniconfig=1.1.1
+  - itsdangerous=1.1.0
+  - jansson=2.11
+  - jinja2=2.11.2
+  - jpeg=9d
+  - kiwisolver=1.3.1
+  - krb5=1.17.2
+  - lcms2=2.11
+  - ld_impl_linux-64=2.35.1
+  - ldap3=2.8.1
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libedit=3.1.20191231
+  - libffi=3.2.1
+  - libgcc-ng=9.3.0
+  - libgfortran-ng=9.3.0
+  - libgfortran5=9.3.0
+  - libgomp=9.3.0
+  - libiconv=1.16
+  - liblapack=3.9.0
+  - libopenblas=0.3.12
+  - libpng=1.6.37
+  - libpq=12.3
+  - libsodium=1.0.18
+  - libstdcxx-ng=9.3.0
+  - libtiff=4.1.0
+  - libwebp-base=1.1.0
+  - libxml2=2.9.10
+  - libxslt=1.1.33
+  - lxml=4.6.1
+  - lz4-c=1.9.2
+  - markupsafe=1.1.1
+  - matplotlib=3.3.1
+  - matplotlib-base=3.3.1
+  - more-itertools=8.6.0
+  - mypy_extensions=0.4.3
+  - ncurses=6.2
+  - numpy=1.19.4
+  - olefile=0.46
+  - openssl=1.1.1h
+  - packaging=20.4
+  - pathspec=0.8.1
+  - pcre=8.44
+  - pendulum=2.1.2
+  - pillow=8.0.1
+  - pip=20.2.4
+  - pluggy=0.13.1
+  - psycopg2=2.8.6
+  - py=1.9.0
+  - pyasn1=0.4.8
+  - pycparser=2.20
+  - pynacl=1.4.0
+  - pyopenssl=19.1.0
+  - pyparsing=2.4.7
+  - pysocks=1.7.1
+  - pytest=6.1.2
+  - python=3.8.6
+  - python-dateutil=2.8.1
+  - python-json-logger=2.0.1
+  - python_abi=3.8
+  - pytzdata=2020.1
+  - readline=8.0
+  - regex=2020.11.13
+  - requests=2.25.0
+  - setuptools=49.6.0
+  - six=1.15.0
+  - sqlalchemy=1.3.20
+  - sqlite=3.33.0
+  - tk=8.6.10
+  - toml=0.10.2
+  - tornado=6.1
+  - typed-ast=1.4.1
+  - typing_extensions=3.7.4.3
+  - urllib3=1.25.11
+  - uwsgi=2.0.19.1
+  - visitor=0.1.3
+  - werkzeug=1.0.1
+  - wheel=0.35.1
+  - wtforms=2.3.2
+  - xz=5.2.5
+  - yaml=0.2.5
+  - zlib=1.2.11
+  - zstd=1.4.5
   - pip:
-    - daiquiri==2.0.0
-    - dominate==2.4.0
-    - flask-bootstrap==3.3.7.1
-    - flask-wtf==0.14.3
-    - python-json-logger==0.1.11
-    - visitor==0.1.3
-    - wtforms==2.2.1
+    - install==1.3.3
+    - pastaplus-soh==2020.4.30
 prefix: /home/servilla/anaconda3/envs/dashboard
