--- a/environment.yml
+++ b/environment.yml
@@ -9,37 +9,40 @@ dependencies:
   - attrs=20.3.0
   - black=20.8b1
   - brotlipy=0.7.0
-  - ca-certificates=2020.11.8
-  - certifi=2020.11.8
+  - ca-certificates=2020.12.5
+  - certifi=2020.12.5
   - cffi=1.14.4
-  - chardet=3.0.4
+  - chardet=4.0.0
   - click=7.1.2
-  - cryptography=3.2.1
+  - cryptography=3.4.4
   - cycler=0.10.0
   - daiquiri=3.0.0
   - dataclasses=0.7
+  - dnspython=2.0.0
   - dominate=2.4.0
+  - email-validator=1.1.2
+  - email_validator=1.1.2
   - flask=1.1.2
   - flask-bootstrap=3.3.7.1
   - flask-login=0.5.0
   - flask-wtf=0.14.3
   - freetype=2.10.4
-  - icu=67.1
+  - icu=68.1
   - idna=2.10
   - iniconfig=1.1.1
   - itsdangerous=1.1.0
-  - jansson=2.11
-  - jinja2=2.11.2
+  - jansson=2.13.1
+  - jinja2=2.11.3
   - jpeg=9d
   - kiwisolver=1.3.1
   - krb5=1.17.2
-  - lcms2=2.11
+  - lcms2=2.12
   - ld_impl_linux-64=2.35.1
   - ldap3=2.8.1
   - libblas=3.9.0
   - libcblas=3.9.0
   - libedit=3.1.20191231
-  - libffi=3.2.1
+  - libffi=3.3
   - libgcc-ng=9.3.0
   - libgfortran-ng=9.3.0
   - libgfortran5=9.3.0
@@ -51,37 +54,37 @@ dependencies:
   - libpq=12.3
   - libsodium=1.0.18
   - libstdcxx-ng=9.3.0
-  - libtiff=4.1.0
-  - libwebp-base=1.1.0
+  - libtiff=4.2.0
+  - libwebp-base=1.2.0
   - libxml2=2.9.10
   - libxslt=1.1.33
-  - lxml=4.6.1
-  - lz4-c=1.9.2
+  - lxml=4.6.2
+  - lz4-c=1.9.3
   - markupsafe=1.1.1
   - matplotlib=3.3.1
   - matplotlib-base=3.3.1
-  - more-itertools=8.6.0
+  - more-itertools=8.7.0
   - mypy_extensions=0.4.3
   - ncurses=6.2
-  - numpy=1.19.4
+  - numpy=1.20.1
   - olefile=0.46
-  - openssl=1.1.1h
-  - packaging=20.4
+  - openssl=1.1.1i
+  - packaging=20.9
   - pathspec=0.8.1
   - pcre=8.44
   - pendulum=2.1.2
-  - pillow=8.0.1
-  - pip=20.2.4
+  - pillow=8.1.0
+  - pip=21.0.1
   - pluggy=0.13.1
   - psycopg2=2.8.6
-  - py=1.9.0
+  - py=1.10.0
   - pyasn1=0.4.8
   - pycparser=2.20
   - pynacl=1.4.0
-  - pyopenssl=19.1.0
+  - pyopenssl=20.0.1
   - pyparsing=2.4.7
   - pysocks=1.7.1
-  - pytest=6.1.2
+  - pytest=6.2.2
   - python=3.8.6
   - python-dateutil=2.8.1
   - python-json-logger=2.0.1
@@ -89,27 +92,27 @@ dependencies:
   - pytzdata=2020.1
   - readline=8.0
   - regex=2020.11.13
-  - requests=2.25.0
+  - requests=2.25.1
   - setuptools=49.6.0
   - six=1.15.0
-  - sqlalchemy=1.3.20
-  - sqlite=3.33.0
+  - sqlalchemy=1.3.23
+  - sqlite=3.34.0
   - tk=8.6.10
   - toml=0.10.2
   - tornado=6.1
-  - typed-ast=1.4.1
+  - typed-ast=1.4.2
   - typing_extensions=3.7.4.3
-  - urllib3=1.25.11
+  - urllib3=1.26.3
   - uwsgi=2.0.19.1
   - visitor=0.1.3
   - werkzeug=1.0.1
-  - wheel=0.35.1
+  - wheel=0.36.2
   - wtforms=2.3.2
   - xz=5.2.5
   - yaml=0.2.5
   - zlib=1.2.11
-  - zstd=1.4.5
+  - zstd=1.4.8
   - pip:
     - install==1.3.3
-    - pastaplus-soh==2020.4.30
+    - pastaplus-soh==2021.1.15
 prefix: /home/servilla/anaconda3/envs/dashboard
