--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,67 @@
-python=3.8
-matplotlib
-lxml
-libiconv
-uwsgi
-sqlalchemy
-pytest
-requests
-ldap3
-psycopg2
-flask
-flask-login
-pendulum
-pynacl
-flask-wtf
-daiquiri
-dominate
-flask-bootstrap
-install
-lxml
-pastaplus-soh
-visitor
-sniffer
+appdirs==1.4.4
+attrs==20.3.0
+black==20.8b1
+brotlipy==0.7.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+cryptography==3.4.4
+cycler==0.10.0
+daiquiri==3.0.0
+dnspython==2.0.0
+dominate==2.4.0
+email-validator==1.1.2
+Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
+Flask-WTF==0.14.3
+idna==2.10
+iniconfig==1.1.1
+install==1.3.3
+itsdangerous==1.1.0
+Jinja2==2.11.3
+kiwisolver==1.3.1
+ldap3==2.8.1
+lxml==4.6.2
+MarkupSafe==1.1.1
+matplotlib==3.3.1
+more-itertools==8.7.0
+mypy-extensions==0.4.3
+numpy==1.20.1
+olefile==0.46
+packaging==20.9
+pastaplus.soh==2021.1.15
+pathspec==0.8.1
+pendulum==2.1.2
+Pillow==8.1.0
+pip==21.0.1
+pluggy==0.13.1
+psycopg2==2.8.6
+py==1.10.0
+pyasn1==0.4.8
+pycparser==2.20
+PyNaCl==1.4.0
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+PySocks==1.7.1
+pytest==6.2.2
+python-dateutil==2.8.1
+python-json-logger==2.0.1
+pytzdata==2020.1
+regex==2020.11.13
+requests==2.25.1
+setuptools==49.6.0.post20210108
+six==1.15.0
+sniffer==2020.8.4
+SQLAlchemy==1.3.23
+toml==0.10.2
+tornado==6.1
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+urllib3==1.26.3
+uWSGI==2.0.19.1
+visitor==0.1.3
+Werkzeug==1.0.1
+wheel==0.36.2
+WTForms==2.3.2
