--- a/environment.yml
+++ b/environment.yml
@@ -3,144 +3,144 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
-  - appdirs=1.4.4=pyh9f0ad1d_0
-  - attrs=20.3.0=pyhd3deb0d_0
-  - black=20.8b1=py_1
-  - brotlipy=0.7.0=py38h497a2fe_1001
-  - ca-certificates=2020.12.5=ha878542_0
-  - certifi=2020.12.5=py38h578d9bd_1
-  - cffi=1.14.5=py38ha65f79e_0
-  - chardet=4.0.0=py38h578d9bd_1
-  - click=7.1.2=pyh9f0ad1d_0
-  - cryptography=3.4.7=py38ha5dfef3_0
-  - cycler=0.10.0=py_2
-  - daiquiri=3.0.0=pyhd3deb0d_0
-  - dataclasses=0.8=pyhc8e2a94_1
-  - dbus=1.13.6=h48d8840_2
-  - dnspython=2.0.0=py_0
-  - dominate=2.4.0=py_0
-  - email-validator=1.1.2=pyhd8ed1ab_1
-  - email_validator=1.1.2=hd8ed1ab_1
-  - expat=2.3.0=h9c3ff4c_0
-  - flask=1.1.2=pyh9f0ad1d_0
-  - flask-bootstrap=3.3.7.1=py_0
-  - flask-login=0.5.0=pyh9f0ad1d_0
-  - flask-wtf=0.14.3=py_0
-  - fontconfig=2.13.1=hba837de_1004
-  - freetype=2.10.4=h0708190_1
-  - gettext=0.19.8.1=h0b5b191_1005
-  - glib=2.68.0=h9c3ff4c_2
-  - glib-tools=2.68.0=h9c3ff4c_2
-  - greenlet=1.0.0=py38h709712a_0
-  - gst-plugins-base=1.18.4=h29181c9_0
-  - gstreamer=1.18.4=h76c114f_0
-  - icu=68.1=h58526e2_0
-  - idna=2.10=pyh9f0ad1d_0
-  - iniconfig=1.1.1=pyh9f0ad1d_0
-  - itsdangerous=1.1.0=py_0
-  - jansson=2.13.1=h7f98852_0
-  - jinja2=2.11.3=pyh44b312d_0
-  - jpeg=9d=h36c2ea0_0
-  - kiwisolver=1.3.1=py38h1fd1430_1
-  - krb5=1.17.2=h926e7f8_0
-  - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.35.1=hea4e1c9_2
-  - ldap3=2.8.1=pyh9f0ad1d_0
-  - libblas=3.9.0=8_openblas
-  - libcblas=3.9.0=8_openblas
-  - libclang=11.1.0=default_ha53f305_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libevent=2.1.10=hcdb4288_3
-  - libffi=3.3=h58526e2_2
-  - libgcc-ng=9.3.0=h2828fa1_18
-  - libgfortran-ng=9.3.0=hff62375_18
-  - libgfortran5=9.3.0=hff62375_18
-  - libglib=2.68.0=h3e27bee_2
-  - libgomp=9.3.0=h2828fa1_18
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=8_openblas
-  - libllvm11=11.1.0=hf817b99_0
-  - libopenblas=0.3.12=pthreads_h4812303_1
-  - libpng=1.6.37=h21135ba_2
-  - libpq=13.1=hfd2b0eb_2
-  - libsodium=1.0.18=h36c2ea0_1
-  - libstdcxx-ng=9.3.0=h6de172a_18
-  - libtiff=4.2.0=hdc55705_0
-  - libuuid=2.32.1=h7f98852_1000
-  - libwebp-base=1.2.0=h7f98852_2
-  - libxcb=1.13=h7f98852_1003
-  - libxkbcommon=1.0.3=he3ba5ed_0
-  - libxml2=2.9.10=h72842e0_3
-  - libxslt=1.1.33=h15afd5d_2
-  - lxml=4.6.3=py38hf1fe3a4_0
-  - lz4-c=1.9.3=h9c3ff4c_0
-  - markupsafe=1.1.1=py38h497a2fe_3
-  - matplotlib=3.4.1=py38h578d9bd_0
-  - matplotlib-base=3.4.1=py38hcc49a3a_0
-  - more-itertools=8.7.0=pyhd8ed1ab_0
-  - mypy_extensions=0.4.3=py38h578d9bd_3
-  - mysql-common=8.0.23=ha770c72_1
-  - mysql-libs=8.0.23=h935591d_1
-  - ncurses=6.2=h58526e2_4
-  - nspr=4.30=h9c3ff4c_0
-  - nss=3.63=hb5efdd6_0
-  - numpy=1.20.2=py38h9894fe3_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - openssl=1.1.1k=h7f98852_0
-  - packaging=20.9=pyh44b312d_0
-  - pathspec=0.8.1=pyhd3deb0d_0
-  - pcre=8.44=he1b5a44_0
-  - pendulum=2.1.2=pyhd8ed1ab_1
-  - pillow=8.1.2=py38ha0e1e83_0
-  - pip=21.0.1=pyhd8ed1ab_0
-  - pluggy=0.13.1=py38h578d9bd_4
-  - psycopg2=2.8.6=py38h497a2fe_2
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - py=1.10.0=pyhd3deb0d_0
-  - pyasn1=0.4.8=py_0
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pynacl=1.4.0=py38h497a2fe_2
-  - pyopenssl=20.0.1=pyhd8ed1ab_0
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyqt=5.12.3=py38h578d9bd_7
-  - pyqt-impl=5.12.3=py38h7400c14_7
-  - pyqt5-sip=4.19.18=py38h709712a_7
-  - pyqtchart=5.12=py38h7400c14_7
-  - pyqtwebengine=5.12.1=py38h7400c14_7
-  - pysocks=1.7.1=py38h578d9bd_3
-  - pytest=6.2.2=py38h578d9bd_0
-  - python=3.8.8=hffdb5ce_0_cpython
-  - python-dateutil=2.8.1=py_0
-  - python-json-logger=2.0.1=pyh9f0ad1d_0
-  - python_abi=3.8=1_cp38
-  - pytzdata=2020.1=pyh9f0ad1d_0
-  - qt=5.12.9=hda022c4_4
-  - readline=8.0=he28a2e2_2
-  - regex=2021.3.17=py38h497a2fe_0
-  - requests=2.25.1=pyhd3deb0d_0
-  - setuptools=49.6.0=py38h578d9bd_3
-  - six=1.15.0=pyh9f0ad1d_0
-  - sqlalchemy=1.4.4=py38h497a2fe_0
-  - sqlite=3.35.3=h74cdb3f_0
-  - tk=8.6.10=h21135ba_1
-  - toml=0.10.2=pyhd8ed1ab_0
-  - tornado=6.1=py38h497a2fe_1
-  - typed-ast=1.4.2=py38h497a2fe_0
-  - typing_extensions=3.7.4.3=py_0
-  - urllib3=1.26.4=pyhd8ed1ab_0
-  - uwsgi=2.0.19.1=py38h6403e6a_3
-  - visitor=0.1.3=pyh9f0ad1d_1
-  - werkzeug=1.0.1=pyh9f0ad1d_0
-  - wheel=0.36.2=pyhd3deb0d_0
-  - wtforms=2.3.2=pyh9f0ad1d_0
-  - xorg-libxau=1.0.9=h7f98852_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xz=5.2.5=h516909a_1
-  - yaml=0.2.5=h516909a_0
-  - zlib=1.2.11=h516909a_1010
-  - zstd=1.4.9=ha95c52a_0
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - appdirs=1.4.4
+  - attrs=20.3.0
+  - black=20.8b1
+  - brotlipy=0.7.0
+  - ca-certificates=2021.5.30
+  - certifi=2021.5.30
+  - cffi=1.14.5
+  - chardet=4.0.0
+  - click=7.1.2
+  - cryptography=3.4.7
+  - cycler=0.10.0
+  - daiquiri=3.0.0
+  - dataclasses=0.8
+  - dbus=1.13.6
+  - dnspython=2.0.0
+  - dominate=2.4.0
+  - email-validator=1.1.2
+  - email_validator=1.1.2
+  - expat=2.3.0
+  - flask=1.1.2
+  - flask-bootstrap=3.3.7.1
+  - flask-login=0.5.0
+  - flask-wtf=0.14.3
+  - fontconfig=2.13.1
+  - freetype=2.10.4
+  - gettext=0.19.8.1
+  - glib=2.68.0
+  - glib-tools=2.68.0
+  - greenlet=1.0.0
+  - gst-plugins-base=1.18.4
+  - gstreamer=1.18.4
+  - icu=68.1
+  - idna=2.10
+  - iniconfig=1.1.1
+  - itsdangerous=1.1.0
+  - jansson=2.13.1
+  - jinja2=2.11.3
+  - jpeg=9d
+  - kiwisolver=1.3.1
+  - krb5=1.17.2
+  - lcms2=2.12
+  - ld_impl_linux-64=2.35.1
+  - ldap3=2.8.1
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libclang=11.1.0
+  - libedit=3.1.20191231
+  - libevent=2.1.10
+  - libffi=3.3
+  - libgcc-ng=9.3.0
+  - libgfortran-ng=9.3.0
+  - libgfortran5=9.3.0
+  - libglib=2.68.0
+  - libgomp=9.3.0
+  - libiconv=1.16
+  - liblapack=3.9.0
+  - libllvm11=11.1.0
+  - libopenblas=0.3.12
+  - libpng=1.6.37
+  - libpq=13.1
+  - libsodium=1.0.18
+  - libstdcxx-ng=9.3.0
+  - libtiff=4.2.0
+  - libuuid=2.32.1
+  - libwebp-base=1.2.0
+  - libxcb=1.13
+  - libxkbcommon=1.0.3
+  - libxml2=2.9.10
+  - libxslt=1.1.33
+  - lxml=4.6.3
+  - lz4-c=1.9.3
+  - markupsafe=1.1.1
+  - matplotlib=3.4.1
+  - matplotlib-base=3.4.1
+  - more-itertools=8.7.0
+  - mypy_extensions=0.4.3
+  - mysql-common=8.0.23
+  - mysql-libs=8.0.23
+  - ncurses=6.2
+  - nspr=4.30
+  - nss=3.63
+  - numpy=1.20.2
+  - olefile=0.46
+  - openssl=1.1.1k
+  - packaging=20.9
+  - pathspec=0.8.1
+  - pcre=8.44
+  - pendulum=2.1.2
+  - pillow=8.1.2
+  - pip=21.0.1
+  - pluggy=0.13.1
+  - psycopg2=2.8.6
+  - pthread-stubs=0.4
+  - py=1.10.0
+  - pyasn1=0.4.8
+  - pycparser=2.20
+  - pynacl=1.4.0
+  - pyopenssl=20.0.1
+  - pyparsing=2.4.7
+  - pyqt=5.12.3
+  - pyqt-impl=5.12.3
+  - pyqt5-sip=4.19.18
+  - pyqtchart=5.12
+  - pyqtwebengine=5.12.1
+  - pysocks=1.7.1
+  - pytest=6.2.2
+  - python=3.8.8
+  - python-dateutil=2.8.1
+  - python-json-logger=2.0.1
+  - python_abi=3.8
+  - pytzdata=2020.1
+  - qt=5.12.9
+  - readline=8.0
+  - regex=2021.3.17
+  - requests=2.25.1
+  - setuptools=49.6.0
+  - six=1.15.0
+  - sqlalchemy=1.4.4
+  - sqlite=3.35.3
+  - tk=8.6.10
+  - toml=0.10.2
+  - tornado=6.1
+  - typed-ast=1.4.2
+  - typing_extensions=3.7.4.3
+  - urllib3=1.26.5
+  - uwsgi=2.0.19.1
+  - visitor=0.1.3
+  - werkzeug=1.0.1
+  - wheel=0.36.2
+  - wtforms=2.3.2
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xz=5.2.5
+  - yaml=0.2.5
+  - zlib=1.2.11
+  - zstd=1.4.9
   - pip:
     - install==1.3.3
     - pastaplus-soh==2021.1.15
