--- a/environment.yml
+++ b/environment.yml
@@ -6,14 +6,14 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - alsa-lib=1.2.3
-  - appdirs=1.4.4
   - attrs=21.2.0
-  - black=21.5b2
+  - black=21.8b0
   - brotlipy=0.7.0
   - ca-certificates=2021.5.30
   - certifi=2021.5.30
-  - cffi=1.14.5
+  - cffi=1.14.6
   - chardet=4.0.0
+  - charset-normalizer=2.0.0
   - click=8.0.1
   - cryptography=3.4.7
   - cycler=0.10.0
@@ -32,24 +32,24 @@ dependencies:
   - fontconfig=2.13.1
   - freetype=2.10.4
   - gettext=0.19.8.1
-  - glib=2.68.3
-  - glib-tools=2.68.3
-  - greenlet=1.1.0
+  - glib=2.68.4
+  - glib-tools=2.68.4
+  - greenlet=1.1.1
   - gst-plugins-base=1.18.4
   - gstreamer=1.18.4
   - icu=68.1
-  - idna=2.10
+  - idna=3.1
   - iniconfig=1.1.1
   - itsdangerous=2.0.1
   - jansson=2.13.1
   - jbig=2.1
   - jinja2=3.0.1
   - jpeg=9d
-  - kiwisolver=1.3.1
-  - krb5=1.19.1
+  - kiwisolver=1.3.2
+  - krb5=1.19.2
   - lcms2=2.12
-  - ld_impl_linux-64=2.35.1
-  - ldap3=2.8.1
+  - ld_impl_linux-64=2.36.1
+  - ldap3=2.9.1
   - lerc=2.2.1
   - libblas=3.9.0
   - libcblas=3.9.0
@@ -58,25 +58,25 @@ dependencies:
   - libedit=3.1.20191231
   - libevent=2.1.10
   - libffi=3.3
-  - libgcc-ng=9.3.0
-  - libgfortran-ng=9.3.0
-  - libgfortran5=9.3.0
-  - libglib=2.68.3
-  - libgomp=9.3.0
+  - libgcc-ng=11.1.0
+  - libgfortran-ng=11.1.0
+  - libgfortran5=11.1.0
+  - libglib=2.68.4
+  - libgomp=11.1.0
   - libiconv=1.16
   - liblapack=3.9.0
   - libllvm11=11.1.0
   - libogg=1.3.4
-  - libopenblas=0.3.15
+  - libopenblas=0.3.17
   - libopus=1.3.1
   - libpng=1.6.37
   - libpq=13.3
   - libsodium=1.0.18
-  - libstdcxx-ng=9.3.0
+  - libstdcxx-ng=11.1.0
   - libtiff=4.3.0
   - libuuid=2.32.1
   - libvorbis=1.3.7
-  - libwebp-base=1.2.0
+  - libwebp-base=1.2.1
   - libxcb=1.13
   - libxkbcommon=1.0.3
   - libxml2=2.9.12
@@ -84,27 +84,28 @@ dependencies:
   - lxml=4.6.3
   - lz4-c=1.9.3
   - markupsafe=2.0.1
-  - matplotlib=3.4.2
-  - matplotlib-base=3.4.2
-  - more-itertools=8.8.0
+  - matplotlib=3.4.3
+  - matplotlib-base=3.4.3
+  - more-itertools=8.9.0
   - mypy_extensions=0.4.3
   - mysql-common=8.0.25
   - mysql-libs=8.0.25
   - ncurses=6.2
   - nspr=4.30
-  - nss=3.67
-  - numpy=1.20.3
+  - nss=3.69
+  - numpy=1.21.2
   - olefile=0.46
   - openjpeg=2.4.0
-  - openssl=1.1.1k
-  - packaging=20.9
-  - pathspec=0.8.1
-  - pcre=8.44
+  - openssl=1.1.1l
+  - packaging=21.0
+  - pathspec=0.9.0
+  - pcre=8.45
   - pendulum=2.1.2
-  - pillow=8.2.0
-  - pip=21.1.2
+  - pillow=8.3.2
+  - pip=21.2.4
+  - platformdirs=2.3.0
   - pluggy=0.13.1
-  - psycopg2=2.8.6
+  - psycopg2=2.9.1
   - pthread-stubs=0.4
   - py=1.10.0
   - pyasn1=0.4.8
@@ -118,30 +119,32 @@ dependencies:
   - pyqtchart=5.12
   - pyqtwebengine=5.12.1
   - pysocks=1.7.1
-  - pytest=6.2.4
+  - pytest=6.2.5
   - python=3.8.10
-  - python-dateutil=2.8.1
+  - python-dateutil=2.8.2
   - python-json-logger=2.0.1
   - python_abi=3.8
   - pytzdata=2020.1
   - qt=5.12.9
   - readline=8.1
-  - regex=2021.4.4
-  - requests=2.25.1
-  - setuptools=49.6.0
+  - regex=2021.8.28
+  - requests=2.26.0
+  - setuptools=58.0.3
   - six=1.16.0
-  - sqlalchemy=1.4.18
-  - sqlite=3.35.5
-  - tk=8.6.10
+  - sqlalchemy=1.4.23
+  - sqlite=3.36.0
+  - tk=8.6.11
   - toml=0.10.2
+  - tomli=1.2.1
   - tornado=6.1
   - typed-ast=1.4.3
+  - typing-extensions=3.10.0.0
   - typing_extensions=3.10.0.0
-  - urllib3=1.26.5
+  - urllib3=1.26.6
   - uwsgi=2.0.19.1
   - visitor=0.1.3
   - werkzeug=2.0.1
-  - wheel=0.36.2
+  - wheel=0.37.0
   - wtforms=2.3.2
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
@@ -152,4 +155,5 @@ dependencies:
   - pip:
     - install==1.3.3
     - pastaplus-soh==2021.5.20
+    - sniffer==2020.8.4
 prefix: /home/servilla/anaconda3/envs/dashboard
