--- a/environment.yml
+++ b/environment.yml
@@ -5,164 +5,195 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - alsa-lib=1.2.3
-  - argon2-cffi=21.3.0
-  - argon2-cffi-bindings=21.2.0
-  - attrs=21.4.0
-  - bcrypt=3.2.0
+  - alsa-lib=1.2.8
+  - attr=2.5.1
   - brotli=1.0.9
   - brotli-bin=1.0.9
   - brotlipy=0.7.0
-  - ca-certificates=2021.10.8
-  - certifi=2021.10.8
-  - cffi=1.15.0
-  - charset-normalizer=2.0.12
-  - click=8.0.4
-  - cryptography=36.0.1
+  - bzip2=1.0.8
+  - ca-certificates=2022.12.7
+  - cairo=1.16.0
+  - certifi=2022.12.7
+  - cffi=1.15.1
+  - charset-normalizer=3.1.0
+  - click=8.1.3
+  - colorama=0.4.6
+  - contourpy=1.0.7
+  - cryptography=40.0.2
   - cycler=0.11.0
   - daiquiri=3.0.0
   - dbus=1.13.6
-  - dnspython=2.2.1
-  - dominate=2.6.0
-  - email-validator=1.1.3
-  - email_validator=1.1.3
-  - expat=2.4.7
-  - flask=2.0.3
+  - dnspython=2.3.0
+  - dominate=2.7.0
+  - email-validator=1.3.1
+  - email_validator=1.3.1
+  - exceptiongroup=1.1.1
+  - expat=2.5.0
+  - flask=2.2.3
   - flask-bootstrap=3.3.7.1
-  - flask-login=0.5.0
-  - flask-wtf=1.0.0
-  - flit-core=3.7.1
+  - flask-login=0.6.2
+  - flask-wtf=1.1.1
   - font-ttf-dejavu-sans-mono=2.37
   - font-ttf-inconsolata=3.000
   - font-ttf-source-code-pro=2.038
   - font-ttf-ubuntu=0.83
-  - fontconfig=2.13.96
+  - fontconfig=2.14.2
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.30.0
-  - freetype=2.10.4
-  - gettext=0.19.8.1
-  - giflib=5.2.1
-  - greenlet=1.1.2
-  - gst-plugins-base=1.18.5
-  - gstreamer=1.18.5
-  - icu=69.1
-  - idna=3.3
-  - iniconfig=1.1.1
-  - itsdangerous=2.1.1
+  - fonttools=4.39.3
+  - freetype=2.12.1
+  - gettext=0.21.1
+  - glib=2.76.2
+  - glib-tools=2.76.2
+  - graphite2=1.3.13
+  - greenlet=2.0.2
+  - gst-plugins-base=1.22.0
+  - gstreamer=1.22.0
+  - harfbuzz=6.0.0
+  - icu=72.1
+  - idna=3.4
+  - importlib-metadata=6.6.0
+  - iniconfig=2.0.0
+  - itsdangerous=2.1.2
   - jansson=2.14
-  - jbig=2.1
-  - jinja2=3.0.3
-  - jpeg=9e
+  - jinja2=3.1.2
   - keyutils=1.6.1
-  - kiwisolver=1.3.2
-  - krb5=1.19.2
-  - lcms2=2.12
-  - ld_impl_linux-64=2.36.1
+  - kiwisolver=1.4.4
+  - krb5=1.20.1
+  - lame=3.100
+  - lcms2=2.15
+  - ld_impl_linux-64=2.40
   - ldap3=2.9.1
-  - lerc=3.0
+  - lerc=4.0.0
   - libblas=3.9.0
   - libbrotlicommon=1.0.9
   - libbrotlidec=1.0.9
   - libbrotlienc=1.0.9
+  - libcap=2.67
   - libcblas=3.9.0
-  - libclang=13.0.1
-  - libdeflate=1.10
+  - libclang=16.0.2
+  - libclang13=16.0.2
+  - libcups=2.3.3
+  - libdeflate=1.18
   - libedit=3.1.20191231
   - libevent=2.1.10
+  - libexpat=2.5.0
   - libffi=3.4.2
-  - libgcc-ng=11.2.0
-  - libgfortran-ng=11.2.0
-  - libgfortran5=11.2.0
-  - libglib=2.70.2
-  - libgomp=11.2.0
-  - libiconv=1.16
+  - libflac=1.4.2
+  - libgcc-ng=12.2.0
+  - libgcrypt=1.10.1
+  - libgfortran-ng=12.2.0
+  - libgfortran5=12.2.0
+  - libglib=2.76.2
+  - libgomp=12.2.0
+  - libgpg-error=1.46
+  - libiconv=1.17
+  - libjpeg-turbo=2.1.5.1
   - liblapack=3.9.0
-  - libllvm13=13.0.1
+  - libllvm16=16.0.2
   - libnsl=2.0.0
   - libogg=1.3.4
-  - libopenblas=0.3.18
+  - libopenblas=0.3.21
   - libopus=1.3.1
-  - libpng=1.6.37
-  - libpq=14.2
+  - libpng=1.6.39
+  - libpq=15.2
+  - libsndfile=1.2.0
   - libsodium=1.0.18
-  - libstdcxx-ng=11.2.0
-  - libtiff=4.3.0
-  - libuuid=2.32.1
+  - libsqlite=3.40.0
+  - libstdcxx-ng=12.2.0
+  - libsystemd0=253
+  - libtiff=4.5.0
+  - libuuid=2.38.1
   - libvorbis=1.3.7
-  - libwebp=1.2.2
-  - libwebp-base=1.2.2
+  - libwebp-base=1.3.0
   - libxcb=1.13
-  - libxkbcommon=1.0.3
-  - libxml2=2.9.12
-  - libxslt=1.1.33
-  - libzlib=1.2.11
-  - lxml=4.8.0
-  - lz4-c=1.9.3
-  - markupsafe=2.1.0
-  - matplotlib=3.5.1
-  - matplotlib-base=3.5.1
+  - libxkbcommon=1.5.0
+  - libxml2=2.10.4
+  - libxslt=1.1.37
+  - libzlib=1.2.13
+  - lxml=4.9.2
+  - lz4-c=1.9.4
+  - markupsafe=2.1.2
+  - matplotlib=3.7.1
+  - matplotlib-base=3.7.1
+  - mpg123=1.31.3
   - munkres=1.1.4
-  - mysql-common=8.0.28
-  - mysql-libs=8.0.28
+  - mysql-common=8.0.32
+  - mysql-libs=8.0.32
   - ncurses=6.3
-  - nspr=4.32
-  - nss=3.74
-  - numpy=1.22.3
-  - openjpeg=2.4.0
-  - openssl=1.1.1l
-  - packaging=21.3
-  - passlib=1.7.4
+  - nspr=4.35
+  - nss=3.89
+  - numpy=1.24.3
+  - openjpeg=2.5.0
+  - openssl=3.1.0
+  - packaging=23.1
   - pcre=8.45
+  - pcre2=10.40
   - pendulum=2.1.2
-  - pillow=9.0.1
-  - pip=22.0.4
+  - pillow=9.5.0
+  - pip=23.1.2
+  - pixman=0.40.0
   - pluggy=1.0.0
+  - ply=3.11
   - psycopg2=2.9.3
   - pthread-stubs=0.4
-  - py=1.11.0
+  - pulseaudio-client=16.1
   - pyasn1=0.4.8
   - pycparser=2.21
   - pynacl=1.5.0
-  - pyopenssl=22.0.0
-  - pyparsing=3.0.7
-  - pyqt=5.12.3
-  - pyqt-impl=5.12.3
-  - pyqt5-sip=4.19.18
-  - pyqtchart=5.12
-  - pyqtwebengine=5.12.1
+  - pyopenssl=23.1.1
+  - pyparsing=3.0.9
+  - pyqt=5.15.7
+  - pyqt5-sip=12.11.0
   - pysocks=1.7.1
-  - pytest=7.0.1
-  - python=3.8.12
+  - pytest=7.3.1
+  - python=3.11.3
   - python-dateutil=2.8.2
-  - python-json-logger=2.0.1
-  - python_abi=3.8
+  - python-json-logger=2.0.7
+  - python_abi=3.11
   - pytzdata=2020.1
-  - qt=5.12.9
-  - readline=8.1
-  - requests=2.27.1
-  - setuptools=60.9.3
+  - qt-main=5.15.8
+  - readline=8.2
+  - requests=2.29.0
+  - setuptools=67.7.2
+  - sip=6.7.9
   - six=1.16.0
-  - sqlalchemy=1.4.32
-  - sqlite=3.37.0
+  - sqlalchemy=1.4.46
   - tk=8.6.12
+  - toml=0.10.2
   - tomli=2.0.1
-  - tornado=6.1
-  - unicodedata2=14.0.0
-  - urllib3=1.26.8
-  - uwsgi=2.0.20
+  - tornado=6.3
+  - tzdata=2023c
+  - urllib3=1.26.15
+  - uwsgi=2.0.21
   - visitor=0.1.3
-  - werkzeug=2.0.3
-  - wheel=0.37.1
+  - werkzeug=2.3.0
+  - wheel=0.40.0
   - wtforms=3.0.1
+  - xcb-util=0.4.0
+  - xcb-util-image=0.4.0
+  - xcb-util-keysyms=0.4.0
+  - xcb-util-renderutil=0.3.9
+  - xcb-util-wm=0.4.1
+  - xkeyboard-config=2.38
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.8.4
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
-  - xz=5.2.5
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.10
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xf86vidmodeproto=2.3.1
+  - xorg-xproto=7.0.31
+  - xz=5.2.6
   - yaml=0.2.5
-  - zlib=1.2.11
+  - zipp=3.15.0
+  - zlib=1.2.13
   - zstd=1.5.2
   - pip:
-    - install==1.3.3
-    - pastaplus-soh==2021.5.20
-    - sniffer==2020.8.4
+      - pastaplus-soh==2023.2.22
+      - sniffer==2020.8.4
 prefix: /home/servilla/anaconda3/envs/dashboard
