--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,68 @@
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-attrs==21.4.0
-bcrypt==3.2.0
 brotlipy==0.7.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.0.4
-cryptography==36.0.1
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+contourpy==1.0.7
+cryptography==40.0.2
 cycler==0.11.0
 daiquiri==3.0.0
-dnspython==2.2.1
-dominate==2.6.0
-email-validator==1.1.3
-Flask==2.0.3
+dnspython==2.3.0
+dominate==2.7.0
+email-validator==1.3.1
+exceptiongroup==1.1.1
+Flask==2.2.3
 Flask-Bootstrap==3.3.7.1
-Flask-Login==0.5.0
-Flask-WTF==1.0.0
-flit_core==3.7.1
-fonttools==4.30.0
-greenlet==1.1.2
-idna==3.3
-iniconfig==1.1.1
-install==1.3.3
-itsdangerous==2.1.1
-Jinja2==3.0.3
-kiwisolver==1.3.2
+Flask-Login==0.6.2
+Flask-WTF==1.1.1
+fonttools==4.39.3
+greenlet==2.0.2
+idna==3.4
+importlib-metadata==6.6.0
+iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.4
 ldap3==2.9.1
-lxml==4.8.0
-MarkupSafe==2.1.0
-matplotlib==3.5.1
+lxml==4.9.2
+MarkupSafe==2.1.2
+matplotlib==3.7.1
 munkres==1.1.4
-numpy==1.22.3
-packaging==21.3
-passlib==1.7.4
-pastaplus.soh==2021.5.20
+numpy==1.24.3
+packaging==23.1
+pastaplus.soh==2023.2.22
 pendulum==2.1.2
-Pillow==9.0.1
-pip==22.0.4
+Pillow==9.5.0
+pip==23.1.2
 pluggy==1.0.0
+ply==3.11
 psycopg2==2.9.3
-py==1.11.0
 pyasn1==0.4.8
 pycparser==2.21
 PyNaCl==1.5.0
-pyOpenSSL==22.0.0
-pyparsing==3.0.7
-PyQt5==5.12.3
-PyQt5_sip==4.19.18
-PyQtChart==5.12
-PyQtWebEngine==5.12.1
+pyOpenSSL==23.1.1
+pyparsing==3.0.9
+PyQt5==5.15.7
+PyQt5-sip==12.11.0
 PySocks==1.7.1
-pytest==7.0.1
+pytest==7.3.1
 python-dateutil==2.8.2
-python-json-logger==2.0.1
+python-json-logger==2.0.7
 pytzdata==2020.1
-requests==2.27.1
-setuptools==60.9.3
+requests==2.29.0
+setuptools==67.7.2
+sip==6.7.9
 six==1.16.0
 sniffer==2020.8.4
-SQLAlchemy==1.4.32
+SQLAlchemy==1.4.46
+toml==0.10.2
 tomli==2.0.1
-tornado==6.1
-unicodedata2==14.0.0
-urllib3==1.26.8
-uWSGI==2.0.20
+tornado==6.3
+urllib3==1.26.15
+uWSGI==2.0.21
 visitor==0.1.3
-Werkzeug==2.0.3
-wheel==0.37.1
+Werkzeug==2.3.0
+wheel==0.40.0
 WTForms==3.0.1
+zipp==3.15.0
