--- a/environment-min.yml
+++ b/environment-min.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - sqlalchemy=1.4.46
   - pillow=10.0.1
-  - werkzeug=2.3.7
+  - werkzeug<3
   - flask
   - urllib3
   - pendulum
