--- a/environment-min.yml
+++ b/environment-min.yml
@@ -4,9 +4,9 @@ channels:
   - defaults
 dependencies:
   - sqlalchemy=1.4.46
-  - pillow=10.2.0
-  - cryptography>=42.0.4
-  - werkzeug<3
+  - pillow
+  - cryptography
+  - werkzeug
   - flask
   - urllib3
   - pendulum
