--- a/environment.yml
+++ b/environment.yml
@@ -5,10 +5,9 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - alsa-lib=1.2.10
-  - anyio=4.3.0
+  - alsa-lib=1.2.11
   - attr=2.5.1
-  - blinker=1.7.0
+  - blinker=1.8.2
   - brotli=1.1.0
   - brotli-bin=1.1.0
   - brotli-python=1.1.0
@@ -20,18 +19,18 @@ dependencies:
   - charset-normalizer=3.3.2
   - click=8.1.7
   - colorama=0.4.6
-  - contourpy=1.2.0
-  - cryptography=42.0.4
+  - contourpy=1.2.1
+  - cryptography=42.0.7
   - cycler=0.12.1
   - daiquiri=3.0.0
   - dbus=1.13.6
-  - dnspython=2.4.2
+  - dnspython=2.6.1
   - dominate=2.9.1
-  - email-validator=2.1.0.post1
-  - email_validator=2.1.0.post1
+  - email-validator=2.1.1
+  - email_validator=2.1.1
   - exceptiongroup=1.2.0
-  - expat=2.5.0
-  - flask=2.3.3
+  - expat=2.6.2
+  - flask=3.0.3
   - flask-bootstrap=3.3.7.1
   - flask-login=0.6.3
   - flask-wtf=1.2.1
@@ -42,28 +41,24 @@ dependencies:
   - fontconfig=2.14.2
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.49.0
+  - fonttools=4.51.0
   - freetype=2.12.1
-  - gettext=0.21.1
-  - glib=2.78.4
-  - glib-tools=2.78.4
+  - gettext=0.22.5
+  - gettext-tools=0.22.5
+  - glib=2.80.2
+  - glib-tools=2.80.2
   - graphite2=1.3.13
   - greenlet=3.0.3
-  - gst-plugins-base=1.22.9
-  - gstreamer=1.22.9
-  - h11=0.14.0
-  - h2=4.1.0
-  - harfbuzz=8.3.0
-  - hpack=4.0.0
-  - httpcore=1.0.4
-  - hyperframe=6.0.1
+  - gst-plugins-base=1.24.3
+  - gstreamer=1.24.3
+  - harfbuzz=8.4.0
   - icu=73.2
-  - idna=3.6
-  - importlib-metadata=7.0.1
+  - idna=3.7
+  - importlib-metadata=7.1.0
   - iniconfig=2.0.0
-  - itsdangerous=2.1.2
+  - itsdangerous=2.2.0
   - jansson=2.14
-  - jinja2=3.1.3
+  - jinja2=3.1.4
   - keyutils=1.6.1
   - kiwisolver=1.4.5
   - krb5=1.21.2
@@ -72,112 +67,116 @@ dependencies:
   - ld_impl_linux-64=2.40
   - ldap3=2.9.1
   - lerc=4.0.0
+  - libasprintf=0.22.5
+  - libasprintf-devel=0.22.5
   - libblas=3.9.0
   - libbrotlicommon=1.1.0
   - libbrotlidec=1.1.0
   - libbrotlienc=1.1.0
   - libcap=2.69
   - libcblas=3.9.0
-  - libclang=15.0.7
-  - libclang13=15.0.7
+  - libclang-cpp15=15.0.7
+  - libclang13=18.1.5
   - libcups=2.3.3
-  - libdeflate=1.19
+  - libdeflate=1.20
   - libedit=3.1.20191231
   - libevent=2.1.12
-  - libexpat=2.5.0
+  - libexpat=2.6.2
   - libffi=3.4.2
   - libflac=1.4.3
   - libgcc-ng=13.2.0
   - libgcrypt=1.10.3
+  - libgettextpo=0.22.5
+  - libgettextpo-devel=0.22.5
   - libgfortran-ng=13.2.0
   - libgfortran5=13.2.0
-  - libglib=2.78.4
+  - libglib=2.80.2
   - libgomp=13.2.0
-  - libgpg-error=1.47
+  - libgpg-error=1.49
   - libiconv=1.17
   - libjpeg-turbo=3.0.0
   - liblapack=3.9.0
   - libllvm15=15.0.7
+  - libllvm18=18.1.5
   - libnsl=2.0.1
   - libogg=1.3.4
-  - libopenblas=0.3.26
+  - libopenblas=0.3.27
   - libopus=1.3.1
-  - libpng=1.6.42
-  - libpq=16.2
+  - libpng=1.6.43
+  - libpq=16.3
   - libsndfile=1.2.2
   - libsodium=1.0.18
-  - libsqlite=3.45.1
+  - libsqlite=3.45.3
   - libstdcxx-ng=13.2.0
   - libsystemd0=255
   - libtiff=4.6.0
   - libuuid=2.38.1
   - libvorbis=1.3.7
-  - libwebp-base=1.3.2
+  - libwebp-base=1.4.0
   - libxcb=1.15
   - libxcrypt=4.4.36
-  - libxkbcommon=1.6.0
-  - libxml2=2.12.5
+  - libxkbcommon=1.7.0
+  - libxml2=2.12.6
   - libxslt=1.1.39
   - libzlib=1.2.13
-  - lxml=5.1.0
+  - lxml=5.2.1
   - lz4-c=1.9.4
   - markupsafe=2.1.5
-  - matplotlib=3.8.3
-  - matplotlib-base=3.8.3
-  - mpg123=1.32.4
+  - matplotlib=3.8.4
+  - matplotlib-base=3.8.4
+  - mpg123=1.32.6
   - munkres=1.1.4
-  - mysql-common=8.0.33
-  - mysql-libs=8.0.33
-  - ncurses=6.4
+  - mysql-common=8.3.0
+  - mysql-libs=8.3.0
+  - ncurses=6.5
   - nspr=4.35
-  - nss=3.98
+  - nss=3.100
   - numpy=1.26.4
-  - openjpeg=2.5.0
-  - openssl=3.2.1
-  - packaging=23.2
+  - openjpeg=2.5.2
+  - openssl=3.3.0
+  - packaging=24.0
   - pcre=8.45
-  - pcre2=10.42
+  - pcre2=10.43
   - pendulum=3.0.0
-  - pillow=10.2.0
+  - pillow=10.3.0
   - pip=24.0
   - pixman=0.43.2
-  - pluggy=1.4.0
+  - pluggy=1.5.0
   - ply=3.11
   - psycopg2=2.9.9
   - pthread-stubs=0.4
-  - pulseaudio-client=16.1
-  - pyasn1=0.5.1
-  - pycparser=2.21
+  - pulseaudio-client=17.0
+  - pyasn1=0.6.0
+  - pycparser=2.22
   - pynacl=1.5.0
-  - pyparsing=3.1.1
+  - pyparsing=3.1.2
   - pyqt=5.15.9
   - pyqt5-sip=12.12.2
   - pysocks=1.7.1
-  - pytest=8.0.1
-  - python=3.11.8
-  - python-dateutil=2.8.2
+  - pytest=8.2.0
+  - python=3.11.9
+  - python-dateutil=2.9.0
   - python-json-logger=2.0.7
   - python_abi=3.11
   - qt-main=5.15.8
   - readline=8.2
   - requests=2.31.0
-  - setuptools=69.1.0
+  - setuptools=69.5.1
   - sip=6.7.12
   - six=1.16.0
-  - sniffio=1.3.0
+  - sniffio=1.3.1
   - sqlalchemy=1.4.46
-  - time-machine=2.13.0
+  - time-machine=2.14.1
   - tk=8.6.13
   - toml=0.10.2
   - tomli=2.0.1
   - tornado=6.4
-  - typing_extensions=4.9.0
   - tzdata=2024a
   - urllib3=2.2.1
   - uwsgi=2.0.23
   - visitor=0.1.3
-  - werkzeug=2.3.8
-  - wheel=0.42.0
+  - werkzeug=3.0.3
+  - wheel=0.43.0
   - wtforms=3.1.2
   - xcb-util=0.4.0
   - xcb-util-image=0.4.0
@@ -188,7 +187,7 @@ dependencies:
   - xorg-kbproto=1.0.7
   - xorg-libice=1.1.1
   - xorg-libsm=1.2.4
-  - xorg-libx11=1.8.7
+  - xorg-libx11=1.8.9
   - xorg-libxau=1.0.11
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
@@ -201,5 +200,8 @@ dependencies:
   - yaml=0.2.5
   - zipp=3.17.0
   - zlib=1.2.13
-  - zstd=1.5.5
+  - zstd=1.5.6
+  - pip:
+      - pastaplus-soh==2023.2.22
+      - sniffer==2020.8.4
 prefix: /home/servilla/miniconda3/envs/dashboard
