--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,69 @@
-anyio==4.3.0
-blinker==1.7.0
+blinker==1.8.2
 Brotli==1.1.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-contourpy==1.2.0
-cryptography==42.0.4
+contourpy==1.2.1
+cryptography==42.0.7
 cycler==0.12.1
 daiquiri==3.0.0
-dnspython==2.4.2
+dnspython==2.6.1
 dominate==2.9.1
-email-validator==2.1.0.post1
+email_validator==2.1.1
 exceptiongroup==1.2.0
-Flask==2.3.3
+Flask==3.0.3
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.3
 Flask-WTF==1.2.1
-fonttools==4.49.0
+fonttools==4.51.0
 greenlet==3.0.3
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==1.0.4
-hyperframe==6.0.1
-idna==3.6
-importlib-metadata==7.0.1
+idna==3.7
+importlib_metadata==7.1.0
 iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.3
+itsdangerous==2.2.0
+Jinja2==3.1.4
 kiwisolver==1.4.5
 ldap3==2.9.1
-lxml==5.1.0
+lxml==5.2.1
 MarkupSafe==2.1.5
-matplotlib==3.8.3
+matplotlib==3.8.4
 munkres==1.1.4
 numpy==1.26.4
-packaging==23.2
+packaging==24.0
+pastaplus.soh==2023.2.22
 pendulum==3.0.0
-pillow==10.2.0
+pillow==10.3.0
 pip==24.0
-pluggy==1.4.0
+pluggy==1.5.0
 ply==3.11
 psycopg2==2.9.9
-pyasn1==0.5.1
-pycparser==2.21
+pyasn1==0.6.0
+pycparser==2.22
 PyNaCl==1.5.0
-pyparsing==3.1.1
+pyparsing==3.1.2
 PyQt5==5.15.9
 PyQt5-sip==12.12.2
 PySocks==1.7.1
-pytest==8.0.1
-python-dateutil==2.8.2
+pytest==8.2.0
+python-dateutil==2.9.0
 python-json-logger==2.0.7
 requests==2.31.0
-setuptools==69.1.0
+setuptools==69.5.1
 sip==6.7.12
 six==1.16.0
-sniffio==1.3.0
+sniffer==2020.8.4
+sniffio==1.3.1
 SQLAlchemy==1.4.46
-time-machine==2.13.0
+time-machine==2.14.1
 toml==0.10.2
 tomli==2.0.1
 tornado==6.4
-typing_extensions==4.9.0
 urllib3==2.2.1
 uWSGI==2.0.23
 visitor==0.1.3
-Werkzeug==2.3.8
-wheel==0.42.0
+Werkzeug==3.0.3
+wheel==0.43.0
 WTForms==3.1.2
 zipp==3.17.0
