--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,210 @@
+_libgcc_mutex==0.1
+_openmp_mutex==4.5
+aiodns==4.0.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
+alsa-lib==1.2.15.3
+asyncssh==2.22.0
+attrs==25.4.0
 backports.zstd==1.3.0
+bcrypt==5.0.0
 blinker==1.9.0
-Brotli==1.2.0
+brotli==1.2.0
+brotli-bin==1.2.0
+brotli-python==1.2.0
+bzip2==1.0.8
+ca-certificates==2026.1.4
+cairo==1.18.4
 certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
 contourpy==1.3.3
-cryptography==46.0.3
+cryptography==46.0.5
 cycler==0.12.1
+cyrus-sasl==2.1.28
 daiquiri==3.0.0
+dbus==1.16.2
 dnspython==2.8.0
 dominate==2.9.1
+double-conversion==3.4.0
 email-validator==2.3.0
+email_validator==2.3.0
 exceptiongroup==1.3.1
-Flask==3.1.2
-Flask-Bootstrap==3.3.7.1
-Flask-Login==0.6.3
-Flask-WTF==1.2.2
+faust-cchardet==2.1.19
+flask==3.1.2
+flask-bootstrap==3.3.7.1
+flask-login==0.6.3
+flask-wtf==1.2.2
+font-ttf-dejavu-sans-mono==2.37
+font-ttf-inconsolata==3.000
+font-ttf-source-code-pro==2.038
+font-ttf-ubuntu==0.83
+fontconfig==2.15.0
+fonts-conda-ecosystem==1
+fonts-conda-forge==1
 fonttools==4.61.1
+freetype==2.14.1
+frozenlist==1.8.0
+graphite2==1.3.14
 greenlet==3.3.1
 h2==4.3.0
+harfbuzz==12.3.2
 hpack==4.1.0
 hyperframe==6.1.0
+icu==78.2
 idna==3.11
-importlib_metadata==8.7.0
+importlib-metadata==8.7.0
 iniconfig==2.3.0
+invoke==2.2.1
 itsdangerous==2.2.0
-Jinja2==3.1.6
+jansson==2.15.0
+jinja2==3.1.6
+keyutils==1.6.3
 kiwisolver==1.4.9
+krb5==1.21.3
+lcms2==2.18
+ld_impl_linux-64==2.45.1
 ldap3==2.9.1
+lerc==4.0.0
+libblas==3.11.0
+libbrotlicommon==1.2.0
+libbrotlidec==1.2.0
+libbrotlienc==1.2.0
+libcblas==3.11.0
+libclang-cpp21.1==21.1.8
+libclang13==21.1.8
+libcups==2.3.3
+libdeflate==1.25
+libdrm==2.4.125
+libedit==3.1.20250104
+libegl==1.7.0
+libexpat==2.7.3
+libffi==3.5.2
+libfreetype==2.14.1
+libfreetype6==2.14.1
+libgcc==15.2.0
+libgcc-ng==15.2.0
+libgfortran==15.2.0
+libgfortran5==15.2.0
+libgl==1.7.0
+libglib==2.86.3
+libglvnd==1.7.0
+libglx==1.7.0
+libgomp==15.2.0
+libiconv==1.18
+libjpeg-turbo==3.1.2
+liblapack==3.11.0
+libllvm21==21.1.8
+liblzma==5.8.2
+libnsl==2.0.1
+libntlm==1.8
+libopenblas==0.3.30
+libopengl==1.7.0
+libpciaccess==0.18
+libpng==1.6.55
+libpq==18.1
+libsodium==1.0.20
+libsqlite==3.51.2
+libstdcxx==15.2.0
+libstdcxx-ng==15.2.0
+libtiff==4.7.1
+libuuid==2.41.3
+libvulkan-loader==1.4.341.0
+libwebp-base==1.6.0
+libxcb==1.17.0
+libxcrypt==4.4.36
+libxkbcommon==1.13.1
+libxml2==2.15.1
+libxml2-16==2.15.1
+libxslt==1.1.43
+libzlib==1.3.1
 lxml==6.0.2
-MarkupSafe==3.0.3
+markupsafe==3.0.3
 matplotlib==3.10.8
+matplotlib-base==3.10.8
+multidict==6.7.1
 munkres==1.1.4
-numpy==2.4.1
+ncurses==6.5
+numpy==2.4.2
+openjpeg==2.5.4
+openldap==2.6.10
+openssl==3.6.1
 packaging==26.0
-pendulum==3.1.0
-pillow==12.1.0
-pip==25.3
+paramiko==4.0.0
+pcre2==10.47
+pendulum==3.2.0
+pillow==12.1.1
+pip==26.0.1
+pixman==0.46.4
 pluggy==1.6.0
+propcache==0.4.1
 psycopg2==2.9.11
+pthread-stubs==0.4
 pyasn1==0.6.2
+pycares==5.0.1
 pycparser==2.22
-Pygments==2.19.2
-PyNaCl==1.6.2
+pygments==2.19.2
+pynacl==1.6.2
 pyparsing==3.3.2
-PySide6==6.10.1
-PySocks==1.7.1
+pyside6==6.10.2
+pysocks==1.7.1
 pytest==9.0.2
+python==3.11.14
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
+python_abi==3.11
+pytzdata==2020.1
+qhull==2020.2
+qt6-main==6.10.2
+readline==8.3
 requests==2.32.5
-setuptools==80.10.1
-shiboken6==6.10.1
+setuptools==82.0.0
 six==1.17.0
+sniffer==2020.8.4
 sniffio==1.3.1
-SQLAlchemy==1.4.46
-time-machine==3.2.0
+soh==2025.3.18
+sqlalchemy==1.4.46
+time-machine==2.19.0
+tk==8.6.13
 tomli==2.4.0
 tornado==6.5.4
 typing_extensions==4.15.0
+tzdata==2025c
 unicodedata2==17.0.0
 urllib3==2.6.3
-uWSGI==2.0.31
+uwsgi==2.0.31
 visitor==0.1.3
-Werkzeug==3.1.5
+wayland==1.24.0
+werkzeug==3.1.5
 wheel==0.46.3
-WTForms==3.2.1
+wtforms==3.2.1
+xcb-util==0.4.1
+xcb-util-cursor==0.1.6
+xcb-util-image==0.4.0
+xcb-util-keysyms==0.4.1
+xcb-util-renderutil==0.3.10
+xcb-util-wm==0.4.2
+xkeyboard-config==2.46
+xorg-libice==1.1.2
+xorg-libsm==1.2.6
+xorg-libx11==1.8.13
+xorg-libxau==1.0.12
+xorg-libxcomposite==0.4.7
+xorg-libxcursor==1.2.3
+xorg-libxdamage==1.1.6
+xorg-libxdmcp==1.1.5
+xorg-libxext==1.3.7
+xorg-libxfixes==6.0.2
+xorg-libxi==1.8.2
+xorg-libxrandr==1.5.5
+xorg-libxrender==0.9.12
+xorg-libxtst==1.2.5
+xorg-libxxf86vm==1.1.7
+yaml==0.2.5
+yarl==1.22.0
 zipp==3.23.0
+zlib-ng==2.3.3
+zstd==1.5.7
